--- a/zh-CN/4.deploy-oceanbase/5.deploy-oceanbase-database-community-edition/2.local-deployment/4.deploy-OceanBase-database-of-multi-node-cluster.md
+++ b/zh-CN/4.deploy-oceanbase/5.deploy-oceanbase-database-community-edition/2.local-deployment/4.deploy-OceanBase-database-of-multi-node-cluster.md
@@ -46,11 +46,14 @@
     </li>
     <li>
     <p>部署 OBProxy 的机器使用的配置可以和部署 OceanBase 数据库的机器配置不一致。部署 OBProxy 只需 1C/1G  内存即可。
-    <strong>注意</strong></p>
     </li>
     </ul>
-    <p>以下内容以 x86 架构的 CentOS Linux 7.9 镜像作为环境，其他环境可能略有不同。</p>
   </main>
+
+<main id="notice" type='notice'>
+  <h4>注意</h4>
+  <p>以下内容以 x86 架构的 CentOS Linux 7.9 镜像作为环境，其他环境可能略有不同。</p>
+</main>
 
 ## 下载并安装 all-in-one package
 
