--- a/zh-CN/5.data-migration/11.data-migration-between-oceanbase-databases/4.migrate-data-from-oralce-tenant-to-mysql-tenant.md
+++ b/zh-CN/5.data-migration/11.data-migration-between-oceanbase-databases/4.migrate-data-from-oralce-tenant-to-mysql-tenant.md
@@ -23,13 +23,13 @@ OceanBase 导数工具包括导出工具 OBDUMPER 和导入工具 OBLOADER。
    $./obdumper -h <主机IP> -P <端⼝> -u <⽤⼾> -p <密码> [--sys-user <sys 租户下用户名> --sys-password <sys 租户下特定用户的密码>] -c <集群名称> -t <租⼾> -D <Schema 库名> [--ddl] [--csv|--sql] [--all|--table '表名'] -f <数据⽂件或者⽬录>
    ```
 
-  <main id="notice" type='explain'>
-    <h4>说明</h4>
-    <ul>
-    <li>使用 OceanBase 物理节点的主机地址和端口导出数据时，无需指定 <code>-c</code> 选项。</li>
-    <li>有关 OBDUMPER 命令行选项的详细信息，请参见 <a href="https://www.oceanbase.com/docs/enterprise-oceanbase-dumper-loader-cn-10000000001142216">命令行选项</a>。</li>
-    </ul>
-  </main>
+    <main id="notice" type='explain'>
+      <h4>说明</h4>
+      <ul>
+      <li>使用 OceanBase 物理节点的主机地址和端口导出数据时，无需指定 <code>-c</code> 选项。</li>
+      <li>有关 OBDUMPER 命令行选项的详细信息，请参见 <a href="https://www.oceanbase.com/docs/enterprise-oceanbase-dumper-loader-cn-10000000001142216">命令行选项</a>。</li>
+      </ul>
+    </main>
 
 4. 导入表结构/数据。
 
@@ -38,13 +38,13 @@ OceanBase 导数工具包括导出工具 OBDUMPER 和导入工具 OBLOADER。
    $./obloader -h <主机IP> -P <端⼝> -u <⽤⼾> -p <密码>  --sys-user <sys 租户下的 root 用户或 proxyro 用户> --sys-password <sys 租⼾下的账⼾密码> -c <集群> -t <租⼾> -D <Schema 库名> [--ddl] [--csv|--sql] [--all|--table '表名'] -f <数据⽂件或者⽬录>
    ```
 
-  <main id="notice" type='explain'>
-    <h4>说明</h4>
-    <ul>
-    <li>使用 OceanBase 物理节点的主机地址和端口导入数据时，无需指定 <code>-c</code> 选项。</li>
-    <li>有关 OBLOADER 命令行选项的详细信息，请参见 <a href="https://www.oceanbase.com/docs/enterprise-oceanbase-dumper-loader-cn-10000000001142222">命令行选项</a>。</li>
-    </ul>
-  </main>
+    <main id="notice" type='explain'>
+      <h4>说明</h4>
+      <ul>
+      <li>使用 OceanBase 物理节点的主机地址和端口导入数据时，无需指定 <code>-c</code> 选项。</li>
+      <li>有关 OBLOADER 命令行选项的详细信息，请参见 <a href="https://www.oceanbase.com/docs/enterprise-oceanbase-dumper-loader-cn-10000000001142222">命令行选项</a>。</li>
+      </ul>
+    </main>
 
 ## 导出和导入数据示例
 
@@ -400,9 +400,16 @@ OceanBase 导数工具包括导出工具 OBDUMPER 和导入工具 OBLOADER。
     <ul>
     <li>需要将租户 <code>oracle001</code> 里的 Schema <code>OBDUMPER_USER01</code> 导出的目录 <code>/home/admin/test_migrate_data/csv_data/data/</code> 下的 <code>OBDUMPER_USER01</code> 名称修改为 <code>test_data</code>。</li>
     <li>将导出的 CSV 文件名中的表名中的英文字母改为小写。</li>
-    </ul>
     <p>示例语句如下：</p>
-    <p><code></code><code>bash [root@xxx /home/admin/test_migrate_data/csv_data/data]# mv OBDUMPER_USER01 test_data [root@xxx /home/admin/test_migrate_data/csv_data/data]# cd test_data/TABLE [root@xxx /home/admin/test_migrate_data/csv_data/data/test_data/TABLE]# ls TEST_TBL1.1.0.csv TEST_TBL2.1.0.csv [root@xxx /home/admin/test_migrate_data/csv_data/data/test_data/TABLE]# mv TEST_TBL1.1.0.csv test_tbl1.1.0.csv [root@xxx /home/admin/test_migrate_data/csv_data/data/test_data/TABLE]# mv TEST_TBL2.1.0.csv test_tbl2.1.0.csv &lt;code&gt;&lt;/code&gt;</code></p>
+    <pre><code class="language-bash">
+    [root@xxx /home/admin/test_migrate_data/csv_data/data]# mv OBDUMPER_USER01 test_data
+    [root@xxx /home/admin/test_migrate_data/csv_data/data]# cd test_data/TABLE
+    [root@xxx /home/admin/test_migrate_data/csv_data/data/test_data/TABLE]# ls
+    TEST_TBL1.1.0.csv  TEST_TBL2.1.0.csv
+    [root@xxx /home/admin/test_migrate_data/csv_data/data/test_data/TABLE]# mv TEST_TBL1.1.0.csv test_tbl1.1.0.csv
+    [root@xxx /home/admin/test_migrate_data/csv_data/data/test_data/TABLE]# mv TEST_TBL2.1.0.csv test_tbl2.1.0.csv
+    </code></pre>
+    </ul>
   </main>
 
 * 示例语句如下。
