--- a/zh-CN/7.reference/1.oceanbase-database-concepts/4.database-objects/1.database-objects-of-oracle-mode/2.table-of-oracle-mode/2.data-type-of-oracle-mode/7.format-model-of-oracle-mode/3.the-date-and-time-format-model-of-oracle-mode.md
+++ b/zh-CN/7.reference/1.oceanbase-database-concepts/4.database-objects/1.database-objects-of-oracle-mode/2.table-of-oracle-mode/2.data-type-of-oracle-mode/7.format-model-of-oracle-mode/3.the-date-and-time-format-model-of-oracle-mode.md
@@ -74,17 +74,18 @@
 | YYYY SYYYY                                                                                              | 是               | 4 位数字的年份。前缀 S 代表用一个负号表示公元前的日期。                                                                                                                                                         |
 | YYY YY Y                                                                                | 是               | 年份的后 3、2 或 1 位数字。                                                                                                                                                                      |
 
-
   <main id="notice" type='explain'>
     <h4>说明</h4>
     <p>日期时间函数指的是 <code>TO_CHAR</code>、<code>TO_DATE</code>、<code>TO_TIMESTAMP</code> 和 <code>TO_TIMESTAMP_TZ</code> 。
-    <strong>注意</strong></p>
+  </main>
+
+  <main id="notice" type='notice'>
+    <h4>注意</h4>
     <ul>
     <li>表格中展示的转化要求输入的字符串日期能够与格式元素相匹配，否则会报错。</li>
     <li>OceanBase 数据库中默认的日期格式为 <strong>DD-MON-RR</strong> ，如果要显示为上面的格式，可以通过执行 <code>ALTER SESSION SET NLS_DATE_FORMAT = 'YYYY-MM-DD HH24:MI:SS';</code> 修改当前会话的日期时间格式。</li>
     </ul>
   </main>
-
 
 当您的格式字符串漏掉了一些元素时，会得到系统的报错信息：
 
