--- a/zh-CN/7.reference/4.development-reference/1.sql-syntax/3.common-tenant-of-oracle-mode/3.basic-elements-of-oracle-mode/1.built-in-data-types-of-oracle-mode/3.numeric-data-type-of-oracle-mode/2.number-data-type-of-oracle-mode.md
+++ b/zh-CN/7.reference/4.development-reference/1.sql-syntax/3.common-tenant-of-oracle-mode/3.basic-elements-of-oracle-mode/1.built-in-data-types-of-oracle-mode/3.numeric-data-type-of-oracle-mode/2.number-data-type-of-oracle-mode.md
@@ -25,9 +25,13 @@ NUMBER [(p[s])]
     <p>若 s&lt;0，精确到小数点左边 <code>s</code> 位，四舍五入。然后检验有效位是否小于等于 <code>p + |s|</code>。</p>
     </li>
     <li>
-    <p>若 s=0，表示整数。
-    <strong>注意</strong></p>
+    <p>若 s=0，表示整数。</p>
     </li>
+    </ul>
+  </main>
+  <main id="notice" type='notice'>
+    <h4>注意</h4>  
+    <ul>
     <li>
     <p>小数位数正标度是小数点右边到最低有效位数（包括最低有效位数）的有效位数。精度和小数位都用十进制数字表示。</p>
     </li>
@@ -35,7 +39,7 @@ NUMBER [(p[s])]
     <p>小数位数负数标度是小数点左边的有效位数，但不包括最低有效位数。对于负比例，最低有效数字在小数点的左侧，因为实际数据四舍五入到小数点左侧的指定位数。</p>
     </li>
     </ul>
-  </main>
+   </main>
 
 ## 使用说明
 
