--- a/zh-CN/7.reference/4.development-reference/3.pl-reference/3.pl-oracle/11.ddl-operations-on-stored-pl-units-oracle/15.drop-package-oracle.md
+++ b/zh-CN/7.reference/4.development-reference/3.pl-reference/3.pl-oracle/11.ddl-operations-on-stored-pl-units-oracle/15.drop-package-oracle.md
@@ -6,8 +6,11 @@ DROP PACKAGE
   <main id="notice" >
     <h4>功能适用性</h4>
     <p>该内容仅适用于 OceanBase 数据库企业版。OceanBase 数据库社区版仅提供 MySQL 模式。
-    <strong>注意</strong></p>
-    <p>请勿使用此语句从包中删除单个对象，而是要使用带有 <code>OR REPLACE</code> 子句的 <code>CREATE PACKAGE</code> 语句和 <code>CREATE PACKAGE BODY</code> 语句重新创建不带有该对象的程序包。</p>
+  </main>
+
+  <main id="notice" type='notice'>
+    <h4>注意</h4>  
+      <p>请勿使用此语句从包中删除单个对象，而是要使用带有 <code>OR REPLACE</code> 子句的 <code>CREATE PACKAGE</code> 语句和 <code>CREATE PACKAGE BODY</code> 语句重新创建不带有该对象的程序包。</p>
   </main>
 
 前提条件 
