--- a/zh-CN/7.reference/4.development-reference/3.pl-reference/3.pl-oracle/11.ddl-operations-on-stored-pl-units-oracle/6.alter-type-oracle.md
+++ b/zh-CN/7.reference/4.development-reference/3.pl-reference/3.pl-oracle/11.ddl-operations-on-stored-pl-units-oracle/6.alter-type-oracle.md
@@ -6,9 +6,13 @@ ALTER TYPE
   <main id="notice" >
     <h4>功能适用性</h4>
     <p>该内容仅适用于 OceanBase 数据库企业版。OceanBase 数据库社区版仅提供 MySQL 模式。
-    <strong>说明</strong></p>
-    <p>该语句暂未支持。</p>
   </main>
+
+<main id="notice" type='explain'>
+  <h4>说明</h4>
+  <p>该语句暂未支持。</p>
+</main>
+
 
 使用 `ALTER TYPE` 语句可以更改对象类型的现有属性，也可以修改类型的标量属性。 您还可以使用此语句重新编译类型的规范或主体，或者通过添加新的对象成员子程序规范来更改对象类型的规范。
 
