--- a/zh-CN/7.reference/4.development-reference/3.pl-reference/3.pl-oracle/11.ddl-operations-on-stored-pl-units-oracle/7.create-function-oracle.md
+++ b/zh-CN/7.reference/4.development-reference/3.pl-reference/3.pl-oracle/11.ddl-operations-on-stored-pl-units-oracle/7.create-function-oracle.md
@@ -6,7 +6,10 @@ CREATE FUNCTION
   <main id="notice" >
     <h4>功能适用性</h4>
     <p>该内容仅适用于 OceanBase 数据库企业版。OceanBase 数据库社区版仅提供 MySQL 模式。
-    <strong>注意</strong></p>
+  </main>
+
+  <main id="notice" type='notice'>
+    <h4>注意</h4>  
     <p>使用 <code>CREATE FUNCTION</code> 语句创建的独立函数不同于在 PL 块或包中声明和定义的函数。</p>
   </main>
 
