--- a/zh-CN/7.reference/4.development-reference/3.pl-reference/3.pl-oracle/4.collections-and-records-oracle/3.associative-array-oracle.md
+++ b/zh-CN/7.reference/4.development-reference/3.pl-reference/3.pl-oracle/4.collections-and-records-oracle/3.associative-array-oracle.md
@@ -24,10 +24,8 @@
 
   <main id="notice" type='explain'>
     <h4>说明</h4>
-    
+    <p>当遍历密集的关联数组时，不需要考虑元素之间的空隙；当遍历稀疏的关联数组时，需要留意空隙。</p>
   </main>
-
-当遍历密集的关联数组时，不需要考虑元素之间的空隙；当遍历稀疏的关联数组时，需要留意空隙。
 
 关联数组元素赋值 
 -----------------
