--- a/zh-CN/7.reference/4.development-reference/3.pl-reference/3.pl-oracle/4.collections-and-records-oracle/6.collection-constructor-oracle.md
+++ b/zh-CN/7.reference/4.development-reference/3.pl-reference/3.pl-oracle/4.collections-and-records-oracle/6.collection-constructor-oracle.md
@@ -6,9 +6,13 @@
   <main id="notice" >
     <h4>功能适用性</h4>
     <p>该内容仅适用于 OceanBase 数据库企业版。OceanBase 数据库社区版仅提供 MySQL 模式。
-    <strong>说明</strong></p>
-    <p>构造函数仅适用于可变数组和嵌套表。关联数组没有构造函数。在本文中，集合是指可变数组或嵌套表。</p>
   </main>
+
+<main id="notice" type='explain'>
+  <h4>说明</h4>
+  <p>构造函数仅适用于可变数组和嵌套表。关联数组没有构造函数。在本文中，集合是指可变数组或嵌套表。</p>
+</main>
+
 
 调用构造函数的语法如下：
 
