--- a/zh-CN/7.reference/4.development-reference/3.pl-reference/4.pl-system-package/19.DBMS_UTILITY/1.dbms_utility-overview.md
+++ b/zh-CN/7.reference/4.development-reference/3.pl-reference/4.pl-system-package/19.DBMS_UTILITY/1.dbms_utility-overview.md
@@ -6,9 +6,13 @@ DBMS_UTILITY 概述
   <main id="notice" type='notice'>
     <h4>注意</h4>
     <p>OceanBase 数据库当前版本的 <code>DBMS_UTILITY</code> 系统包暂不支持使用 UTF16 编码传递参数。
-    <strong>功能适用性</strong></p>
-    <p>该内容仅适用于 OceanBase 数据库企业版。OceanBase 数据库社区版仅提供 MySQL 模式。</p>
   </main>
+
+<main id="notice" >
+  <h4>功能适用性</h4>
+  <p>该内容仅适用于 OceanBase 数据库企业版。OceanBase 数据库社区版仅提供 MySQL 模式。</p>
+</main>
+
 
 DBMS_UTILITY 数据结构 
 --------------------------------------
