--- a/zh-CN/7.reference/4.development-reference/3.pl-reference/4.pl-system-package/26.UTL_RAW/15.CAST_TO_VARCHAR2.md
+++ b/zh-CN/7.reference/4.development-reference/3.pl-reference/4.pl-system-package/26.UTL_RAW/15.CAST_TO_VARCHAR2.md
@@ -4,10 +4,13 @@
 
   <main id="notice" type='explain'>
     <h4>说明</h4>
-    <p>当转换为 <code>VARCHAR2</code> 时，当前的全球化支持字符集适用于该 <code>VARCHAR2</code> 中的字符。
-    <strong>功能适用性</strong></p>
-    <p>该内容仅适用于 OceanBase 数据库企业版。OceanBase 数据库社区版仅提供 MySQL 模式。</p>
+    <p>当转换为 <code>VARCHAR2</code> 时，当前的全球化支持字符集适用于该 <code>VARCHAR2</code> 中的字符。</p>
   </main>
+
+<main id="notice" >
+  <h4>功能适用性</h4>
+  <p>该内容仅适用于 OceanBase 数据库企业版。OceanBase 数据库社区版仅提供 MySQL 模式。</p>
+</main>
 
 ## 语法 
 
