--- a/zh-CN/7.reference/4.development-reference/4.database-design-specifications-and-practices/6.orm-protocol.md
+++ b/zh-CN/7.reference/4.development-reference/4.database-design-specifications-and-practices/6.orm-protocol.md
@@ -16,7 +16,11 @@ ORM 是对象关系映射 (Object Relational Mapping，简称 ORM），是一种
   <main id="notice" type='explain'>
     <h4>说明</h4>
     <p>该方法的实现方式是在数据库取到 statementName 对应的 SQL 语句的所有记录，再通过 subList 取 start，size 的子集合，线上因为这个原因曾经出现过 OOM。解决该问题的方法，可以在 sqlmap.xml 中引入 <code>#start#</code>，<code>#size#</code>。示例如下：</p>
-    <p><code></code><code>unknow Map&lt;String, Object&gt; map = newHashMap&lt;String, Object&gt;(); map.put(&quot;start&quot;, start); map.put(&quot;size&quot;, size); &lt;code&gt;&lt;/code&gt;</code></p>
+    <pre><code class="language-unknow">
+    Map<String, Object> map = newHashMap<String, Object>();
+    map.put("start", start);
+    map.put("size", size);
+    </code></pre>
   </main>
 
 * 不允许直接拿 HashMap 与 HashTable 作为查询结果集的输出。
