--- a/zh-CN/3.develop/1.application-development-of-mysql-mode/4.read-data-of-mysql-mode/3.conditional-query-of-mysql-mode.md
+++ b/zh-CN/3.develop/1.application-development-of-mysql-mode/4.read-data-of-mysql-mode/3.conditional-query-of-mysql-mode.md
@@ -283,7 +283,7 @@ obclient> SELECT empname, deptno FROM emp WHERE deptno<=30 OR sal>1000;
 
   <main id="notice" type='notice'>
     <h4>注意</h4>
-    <p>当数据库字集为 ASCII 时一个汉字需要两个 <code><em></code>；当字符集为 GBK 时只需要一个 <code></em></code>。</p>
+    <p>当数据库字集为 ASCII 时一个汉字需要两个 <code>_</code>；当字符集为 GBK 时只需要一个 <code>_</code>。</p>
   </main>
 
 ## 区间查询（BETWEEN AND）
