--- a/zh-CN/7.reference/2.administrator-guide/2.basic-database-management/4.manage-tenants/14.manage-tenant-variables.md
+++ b/zh-CN/7.reference/2.administrator-guide/2.basic-database-management/4.manage-tenants/14.manage-tenant-variables.md
@@ -84,16 +84,19 @@ obclient> SELECT * FROM INFORMATION_SCHEMA.SESSION_VARIABLES WHERE VARIABLE_NAME
   <main id="notice" type='explain'>
     <h4>说明</h4>
     <p>Oracle 模式还可以通过 <code>ALTER SYSTEM  SET VARIABLE_NAME = 'VALUE';</code> 语句设置 Global 级别的变量。
-    <strong>说明</strong></p>
+  </main>
+
+<main id="notice" type='explain'>
+    <h4>说明</h4>
     <ul>
     <li>
-    <p>Oracle 模式下，查看权限的相关操作请参见 <a href="5.manage-users-and-permissions/2.oracle-mode/4.view-user-permissions-of-oracle-mode.md">查看用户权限</a>。如果您没有所需的权限，请联系管理员为您添加，为用户添加权限的相关操作请参见 <a href="5.manage-users-and-permissions/2.oracle-mode/5.modify-user-permissions-of-oracle-mode.md">修改用户权限</a>。</p>
+    <p>Oracle 模式下，查看权限的相关操作请参见 <a href="./5.manage-users-and-permissions/2.oracle-mode/4.view-user-permissions-of-oracle-mode.md">查看用户权限</a>。如果您没有所需的权限，请联系管理员为您添加，为用户添加权限的相关操作请参见 <a href="./5.manage-users-and-permissions/2.oracle-mode/5.modify-user-permissions-of-oracle-mode.md">修改用户权限</a>。</p>
     </li>
     <li>
-    <p>MySQL 模式下，查看当前拥有权限的操作请参见 <a href="5.manage-users-and-permissions/3.mysql-mode/4.view-user-permissions-of-mysql-mode.md">查看用户权限</a>。如果您没有所需的权限，请联系管理员为您添加，为用户添加权限的相关操作请参见 <a href="5.manage-users-and-permissions/3.mysql-mode/5.modify-user-permissions-of-mysql-mode.md">修改用户权限</a>。</p>
+    <p>MySQL 模式下，查看当前拥有权限的操作请参见 <a href="./5.manage-users-and-permissions/3.mysql-mode/4.view-user-permissions-of-mysql-mode.md">查看用户权限</a>。如果您没有所需的权限，请联系管理员为您添加，为用户添加权限的相关操作请参见 <a href="./5.manage-users-and-permissions/3.mysql-mode/5.modify-user-permissions-of-mysql-mode.md">修改用户权限</a>。</p>
     </li>
     </ul>
-  </main>
+</main>
 
 示例：
 
