--- a/zh-CN/7.reference/4.development-reference/3.pl-reference/3.pl-oracle/11.ddl-operations-on-stored-pl-units-oracle/16.drop-procedure-oracle.md
+++ b/zh-CN/7.reference/4.development-reference/3.pl-reference/3.pl-oracle/11.ddl-operations-on-stored-pl-units-oracle/16.drop-procedure-oracle.md
@@ -6,7 +6,10 @@ DROP PROCEDURE
   <main id="notice" >
     <h4>功能适用性</h4>
     <p>该内容仅适用于 OceanBase 数据库企业版。OceanBase 数据库社区版仅提供 MySQL 模式。
-    <strong>注意</strong></p>
+  </main>
+
+  <main id="notice" type='notice'>
+    <h4>注意</h4>  
     <p>请勿使用此语句删除程序包中的存储过程。而是需要使用 <code>DROP PACKAGE</code> 语句删除整个程序包，或者使用带有 <code>OR REPLACE</code> 子句的 <code>CREATE PACKAGE</code> 语句重新定义不带有该存储过程的程序包。</p>
   </main>
 
