--- a/zh-CN/7.reference/4.development-reference/3.pl-reference/3.pl-oracle/11.ddl-operations-on-stored-pl-units-oracle/5.alter-trigger-oracle.md
+++ b/zh-CN/7.reference/4.development-reference/3.pl-reference/3.pl-oracle/11.ddl-operations-on-stored-pl-units-oracle/5.alter-trigger-oracle.md
@@ -6,7 +6,10 @@ ALTER TRIGGER
   <main id="notice" >
     <h4>功能适用性</h4>
     <p>该内容仅适用于 OceanBase 数据库企业版。OceanBase 数据库社区版仅提供 MySQL 模式。
-    <strong>注意</strong></p>
+  </main>
+
+  <main id="notice" type='notice'>
+    <h4>注意</h4>  
     <p>此语句不会更改现有触发器的声明或定义。要重新声明或重新定义触发器，请在 <code>CREATE TRIGGER</code> 语句中使用 <code>OR REPLACE</code> 子句。</p>
   </main>
 
