--- a/zh-CN/7.reference/4.development-reference/3.pl-reference/3.pl-oracle/2.data-type-oracle/2.sql-data-type-oracle.md
+++ b/zh-CN/7.reference/4.development-reference/3.pl-reference/3.pl-oracle/2.data-type-oracle/2.sql-data-type-oracle.md
@@ -7,9 +7,12 @@ SQL 支持的数据类型可以在 PL 中直接使用，只是个别变量的长
   <main id="notice" >
     <h4>功能适用性</h4>
     <p>该内容仅适用于 OceanBase 数据库企业版。OceanBase 数据库社区版仅提供 MySQL 模式。
-    <strong>说明</strong></p>
-    <p>关于 SQL 数据类型的详细信息，请参见 <a href="../../../1.sql-syntax/3.common-tenant-of-oracle-mode/3.basic-elements-of-oracle-mode/1.built-in-data-types-of-oracle-mode/1.overview-of-built-in-data-types-of-oracle-mode.md">内建数据类型</a>。</p>
   </main>
+
+<main id="notice" type='explain'>
+  <h4>说明</h4>
+  <p>关于 SQL 数据类型的详细信息，请参见 <a href="../../../1.sql-syntax/3.common-tenant-of-oracle-mode/3.basic-elements-of-oracle-mode/1.built-in-data-types-of-oracle-mode/1.overview-of-built-in-data-types-of-oracle-mode.md">内建数据类型</a>。</p>
+</main>
 
 下表列出了 PL 和 SQL 中最大长度不同的的数据类型：
 
