--- a/zh-CN/7.reference/4.development-reference/3.pl-reference/4.pl-system-package/19.DBMS_UTILITY/17.NAME_TOKENIZE.md
+++ b/zh-CN/7.reference/4.development-reference/3.pl-reference/4.pl-system-package/19.DBMS_UTILITY/17.NAME_TOKENIZE.md
@@ -6,10 +6,13 @@ NAME_TOKENIZE
 
   <main id="notice" type='explain'>
     <h4>说明</h4>
-    <p>OceanBase 数据库当前版本的 <code>DBMS_UTILITY</code> 系统包暂时不支持使用 UTF16 编码的字符集。
-    <strong>功能适用性</strong></p>
-    <p>该内容仅适用于 OceanBase 数据库企业版。OceanBase 数据库社区版仅提供 MySQL 模式。</p>
+    <p>OceanBase 数据库当前版本的 <code>DBMS_UTILITY</code> 系统包暂时不支持使用 UTF16 编码的字符集。</p>
   </main>
+
+<main id="notice" >
+  <h4>功能适用性</h4>
+  <p>该内容仅适用于 OceanBase 数据库企业版。OceanBase 数据库社区版仅提供 MySQL 模式。</p>
+</main>
 
 语法 
 -----------------------
