--- a/zh-CN/7.reference/4.development-reference/3.pl-reference/4.pl-system-package/26.UTL_RAW/9.CAST_FROM_NUMBER.md
+++ b/zh-CN/7.reference/4.development-reference/3.pl-reference/4.pl-system-package/26.UTL_RAW/9.CAST_FROM_NUMBER.md
@@ -5,10 +5,13 @@
 
   <main id="notice" type='explain'>
     <h4>说明</h4>
-    <p>对于 <code>NUMBER</code> 类型，OceanBase 数据库与 Oracle 的实现方式不同，返回的 <code>RAW</code> 是 OceanBase 数据库内部表示的 <code>NUMBER</code> 格式。
-    <strong>功能适用性</strong></p>
-    <p>该内容仅适用于 OceanBase 数据库企业版。OceanBase 数据库社区版仅提供 MySQL 模式。</p>
+    <p>对于 <code>NUMBER</code> 类型，OceanBase 数据库与 Oracle 的实现方式不同，返回的 <code>RAW</code> 是 OceanBase 数据库内部表示的 <code>NUMBER</code> 格式。</p>
   </main>
+
+<main id="notice" >
+  <h4>功能适用性</h4>
+  <p>该内容仅适用于 OceanBase 数据库企业版。OceanBase 数据库社区版仅提供 MySQL 模式。</p>
+</main>
 
 ## 语法
 
