--- a/zh-CN/7.reference/4.development-reference/3.pl-reference/4.pl-system-package/27.anydata-type/1.anydata-type-overview.md
+++ b/zh-CN/7.reference/4.development-reference/3.pl-reference/4.pl-system-package/27.anydata-type/1.anydata-type-overview.md
@@ -6,13 +6,14 @@ ANYDATA TYPE 概述
     <h4>注意</h4>
     <ul>
     <li>当前仅支持在 PL 使用 <code>ANYDATA</code>，不支持作为表的列，也不支持永久存储。</li>
-    <li>当前不支持包含嵌入式 <code>LOB</code> 的 <code>ANYDATA</code> 实例持久存储类型。
-    <strong>功能适用性</strong></li>
+    <li>当前不支持包含嵌入式 <code>LOB</code> 的 <code>ANYDATA</code> 实例持久存储类型。</li>
     </ul>
-    <p>该内容仅适用于 OceanBase 数据库企业版。OceanBase 数据库社区版仅提供 MySQL 模式。</p>
   </main>
 
-
+<main id="notice" >
+  <h4>功能适用性</h4>
+  <p>该内容仅适用于 OceanBase 数据库企业版。OceanBase 数据库社区版仅提供 MySQL 模式。</p>
+</main>
 
 
 构造方式 
