--- a/zh-CN/7.reference/4.development-reference/3.pl-reference/4.pl-system-package/5.DBMS_DEBUG/12.GET_RUNTIME_INFO.md
+++ b/zh-CN/7.reference/4.development-reference/3.pl-reference/4.pl-system-package/5.DBMS_DEBUG/12.GET_RUNTIME_INFO.md
@@ -8,10 +8,13 @@ GET_RUNTIME_INFO 函数用于返回当前程序的有关信息。
 
   <main id="notice" type='explain'>
     <h4>说明</h4>
-    <p>此函数目前仅由客户端 PL 使用。
-    <strong>功能适用性</strong></p>
-    <p>该内容仅适用于 OceanBase 数据库企业版。OceanBase 数据库社区版仅提供 MySQL 模式。</p>
+    <p>此函数目前仅由客户端 PL 使用。</p>
   </main>
+
+<main id="notice" >
+  <h4>功能适用性</h4>
+  <p>该内容仅适用于 OceanBase 数据库企业版。OceanBase 数据库社区版仅提供 MySQL 模式。</p>
+</main>
 
 语法 
 -----------
