--- a/zh-CN/5.data-migration/1.data-migration-overview.md
+++ b/zh-CN/5.data-migration/1.data-migration-overview.md
@@ -1,1 +1,32 @@
 # 数据迁移概述
+
+## 概述
+
+数据迁移是数据库运维常见的操作，主要有如下的应用场景：
+* 调整集群负载和机房搬迁。
+* 数据导出到文件、从文件导入到数据库。
+* 数据库替换。
+* 数据库逻辑复制，包括读写分离、数据库容灾、业务多活等。
+* 业务上的数据复制需求。
+OB 提供丰富的数据迁移复制方法，包括：
+* 使用 OMS 迁移（建议）
+* 使用 OBLOADER & OBDUMPER 迁移
+  * 使用 OBLOADER 导入数据
+  * 使用 OBDUMPER 导出数据
+* 使用 SQL 脚本迁移
+* 使用 mysqldump 迁移
+* 使用 DataX 迁移
+* 使用 OUTFILE 语句迁移
+* 使用 DBCAT 迁移
+
+## 场景
+
+|迁移方案|结构迁移|全量数据迁移|增量数据迁移|数据校验|支持的数据源|
+|---------|---------|-----------|------------|---------|-------|
+|OMS|支持|支持|支持|支持|MySQL</br>PostgreSQL<\br>Oracle<\br>DB2<\br>TiDB<\br>OceanBase<\br>Kafka<\br>RocketMQ<\br>Datahub<\br>ADB|
+|OBLOADER</br>OBDUMPER|	不支持|	支持|不支持|不支持|	OceanBase|
+|SQL 脚本迁移|	支持	|支持|	不支持	|不支持	|主流数据库，但无法跨实例做数据迁移|
+|mydumper|	支持	|支持|	不支持|	不支持	|mysql 兼容的数据源|
+|DataX|不支持|支持|不支持|不支持|较多，具体范围查看官方文档|
+|OUTFILE 语句|	不支持	|支持	|不支持	|不支持	|MySQL<\br>OceanBase|
+|DBCAT|支持|bu支持|不支持|不支持|较多，具体范围查看官方文档|
