--- a/zh-CN/6.manage/2.tenant-management/5.commom-tenant-operations/12.delete-tenant.md
+++ b/zh-CN/6.manage/2.tenant-management/5.commom-tenant-operations/12.delete-tenant.md
@@ -26,7 +26,7 @@
     obclient [(none)]> USE oceanbase;
     ```
 
-3. 通过 `DBA_OB_TENANTS` 视图，查看租户信息。
+3. 通过 `DBA_OB_TENANTS` 视图，查看租户信息。根据租户的 ID、创建时间、资源分配等基本信息，确认是需要执行删除的租户。
 
    本示例中查询租户 `mq_t1` 的租户信息。
 
