--- a/zh-CN/6.manage/2.tenant-management/5.commom-tenant-operations/7.modify-system-variables-of-tenant.md
+++ b/zh-CN/6.manage/2.tenant-management/5.commom-tenant-operations/7.modify-system-variables-of-tenant.md
@@ -12,19 +12,19 @@
    <p>设置 Global 级别变量要求当前用户拥有 SUPER 权限或 ALTER SYSTEM 权限。</br>设置前，请确认您的权限。用户权限的详细说明，参见 <a xref="../../../7.reference/2.administrator-guide/2.basic-database-management/4.manage-tenants/5.manage-users-and-permissions/1.users-and-permissions/1.users-and-their-permissions.md">用户权限概述</a>。</p>
   </main>
 
-## 操作步骤
+## 修改 Session 级别的系统变量
 
 1. 登使用 root 用户登录到数据库的用户租户。
 
-   本示例中使用 `mq_t1` 租户。 
+   本示例中使用 `mq_t1` 租户。
 
     ```sql
     $obclient -h172.30.xx.xx -P2883 -uroot@mq_t1#cluster -p**** -A
     ```
 
-2. 查询系统租户变量
+2. 查询租户 Session 级别的系统变量。
 
-   * 查询系统租户 Session 变量
+   本示例以系统变量 `ob_query_timeout` 为例。
 
       ```sql
       obclient [(none)]> SHOW VARIABLES LIKE 'ob_query_timeout';
@@ -36,24 +36,16 @@
       1 row in set
       ```
 
-   * 查询系统租户 Global 变量
-  
-      ```sql
-      obclient [(none)]> SHOW GLOBAL VARIABLES WHERE variable_name LIKE  'ob_query_timeout';
-      +------------------+----------+
-      | Variable_name    | Value    |
-      +------------------+----------+
-      | ob_query_timeout | 10000000 |
-      +------------------+----------+
-      1 row in set
-      ```
-
-3. 通过 `SET` 修改 Session 级别变量值
+3. 通过 `SET` 修改 Session 级别变量值。
 
     ```sql
     obclient [oceanbase]> SET ob_query_timeout = 20000000;
     Query OK, 0 rows affected
+    ```
 
+4. 查看修改结果。
+
+    ```sql
     obclient [(none)]> SHOW VARIABLES WHERE variable_name LIKE 'ob_query_timeout';
     +------------------+----------+
     | Variable_name    | Value    |
@@ -63,18 +55,22 @@
     1 row in set
     ```
 
-4. 查看修改结果
+## 修改 Global 级别的系统变量
+
+1. 登使用 root 用户登录到数据库的用户租户。
+
+   本示例中使用 `mq_t1` 租户。
 
     ```sql
-    obclient [(none)]> SHOW VARIABLES WHERE variable_name LIKE 'ob_query_timeout';
-    +------------------+----------+
-    | Variable_name    | Value    |
-    +------------------+----------+
-    | ob_query_timeout | 20000000 |
-    +------------------+----------+
-    1 row in set
+    $obclient -h172.30.xx.xx -P2883 -uroot@mq_t1#cluster -p**** -A
+    ```
 
-    obclient [(none)]> SHOW GLOBAL VARIABLES WHERE variable_name LIKE 'ob_query_timeout';
+2. 查询租户的 Global 变量。
+  
+   本示例以系统变量 `ob_query_timeout` 为例。
+
+    ```sql
+    obclient [(none)]> SHOW GLOBAL VARIABLES WHERE variable_name LIKE  'ob_query_timeout';
     +------------------+----------+
     | Variable_name    | Value    |
     +------------------+----------+
@@ -83,24 +79,16 @@
     1 row in set
     ```
 
-5. 通过 `SET` 修改 Global 级别变量值
+3. 通过 `SET` 修改 Global 级别变量值。
 
     ```sql
     obclient [oceanbase]> SET GLOBAL ob_query_timeout = 20000000;
     Query OK, 0 rows affected
     ```
 
-6. 查看修改结果
+4. 查看修改结果。
 
     ```sql
-    obclient [(none)]> SHOW VARIABLES WHERE variable_name LIKE 'ob_query_timeout';
-    +------------------+----------+
-    | Variable_name    | Value    |
-    +------------------+----------+
-    | ob_query_timeout | 20000000 |
-    +------------------+----------+
-    1 row in set
-
     obclient [(none)]> SHOW GLOBAL VARIABLES WHERE variable_name LIKE 'ob_query_timeout';
     +------------------+----------+
     | Variable_name    | Value    |
