--- a/zh-CN/6.manage/3.replica-management/2.replica-distribution/1.locality-overview.md
+++ b/zh-CN/6.manage/3.replica-management/2.replica-distribution/1.locality-overview.md
@@ -30,6 +30,6 @@ replicas{量词}@location
   
   表示租户 tenant1 在 `z1,z2,z3` 上各存在一个全能型副本 。
 
-* tenant2 的 Locality： F@z1 。
+* tenant2 的 Locality： F@z3,F@z4,F,F@z5 。
   
-  表示租户 tenant2 在 `z1` 上存在一个全能型副本 。
+  表示租户 tenant2 在 `z3,z4,z5` 上存在一个全能型副本 。
