--- a/zh-CN/6.manage/3.replica-management/2.replica-distribution/2.common-operations/4.reduce-replicas.md
+++ b/zh-CN/6.manage/3.replica-management/2.replica-distribution/2.common-operations/4.reduce-replicas.md
@@ -1,6 +1,8 @@
 # 减少副本
 
-本文介绍通过修改 Locality ，来减少副本的操作。修改 Locality 可以参考文档[修改 Locality](2.modify-locality.md)。
+本文介绍通过修改 Locality ，来减少副本的操作。
+
+修改 Locality 可以参考文档[修改 Locality](2.modify-locality.md)。
 
 ## 操作步骤
 
