--- a/zh-CN/6.manage/3.replica-management/2.replica-distribution/2.common-operations/5.replica-migration.md
+++ b/zh-CN/6.manage/3.replica-management/2.replica-distribution/2.common-operations/5.replica-migration.md
@@ -83,6 +83,8 @@
     1 row in set
     ```
 
+    根据查询结果，`JOB_STATUS` 的值为 `INPROGRESS` 代表迁移在进行中，当该值为 `SUCCESS` 时，说明迁移成功。
+
 8. 查看 Unit 迁移后的信息。
 
     ```sql
