--- a/zh-CN/6.manage/3.replica-management/5.tenant-expansion-and-contraction/4.adjust-primary-zone.md
+++ b/zh-CN/6.manage/3.replica-management/5.tenant-expansion-and-contraction/4.adjust-primary-zone.md
@@ -1,8 +1,10 @@
-# 通过修改 Primary Zone 扩容
+# 调整 Primary Zone
 
 本文介绍如何通过修改 Primary Zone ，达到租户扩容的功能。
 
 ## 操作步骤
+
+### 增加 primary_zone
 
 1. 使用 root 用户登录到数据库的 sys 租户。
 
@@ -16,10 +18,10 @@
     obclient>USE oceanbase;
     ```
 
-3. 查看租户 mq_t1 信息。
+3. 查询租户 mq_t1 的基本信息，例如 `locality`、`primary zone` 等属性。
 
    ```sql
-    obclient> select * from dba_ob_tenants where tenant_id = 1004;
+    obclient> SELECT * FROM oceanbase.DBA_OB_TENANTS WHERE tenant_id = 1004;
     +-----------+-------------+-------------+----------------------------+----------------------------+----------------------------------------+------------------------------------------------------------------+-------------------+--------------------+--------+---------------+--------+
     | TENANT_ID | TENANT_NAME | TENANT_TYPE | CREATE_TIME                | MODIFY_TIME                | PRIMARY_ZONE                           | LOCALITY                                                         | PREVIOUS_LOCALITY | COMPATIBILITY_MODE | STATUS | IN_RECYCLEBIN | LOCKED |
     +-----------+-------------+-------------+----------------------------+----------------------------+----------------------------------------+------------------------------------------------------------------+-------------------+--------------------+--------+---------------+--------+
@@ -28,10 +30,10 @@
     1 row in set
    ```
 
-4. 查看租户 mq_t1 所拥有的 unit。
+4. 查询租户 mq_t1 的 unit 信息，在单个 Zone 的 `unit num` 为 2。
 
    ```sql
-    obclient> select * from dba_ob_units where tenant_id = 1004;
+    obclient> SELECT * FROM oceanbase.DBA_OB_UNITS WHERE tenant_id = 1004;
     +---------+-----------+--------+------------------+---------------+----------------------------+----------------------------+--------------+-------------+----------+---------------------+-----------------------+----------------+----------------+---------+---------+-------------+---------------+----------+----------+-------------+
     | UNIT_ID | TENANT_ID | STATUS | RESOURCE_POOL_ID | UNIT_GROUP_ID | CREATE_TIME                | MODIFY_TIME                | ZONE         | SVR_IP      | SVR_PORT | MIGRATE_FROM_SVR_IP | MIGRATE_FROM_SVR_PORT | MANUAL_MIGRATE | UNIT_CONFIG_ID | MAX_CPU | MIN_CPU | MEMORY_SIZE | LOG_DISK_SIZE | MAX_IOPS | MIN_IOPS | IOPS_WEIGHT |
     +---------+-----------+--------+------------------+---------------+----------------------------+----------------------------+--------------+-------------+----------+---------------------+-----------------------+----------------+----------------+---------+---------+-------------+---------------+----------+----------+-------------+
@@ -45,10 +47,10 @@
     6 rows in set
    ```
 
-5. 查看租户 mq_t1 目前所拥有的日志流。
+5. 查询租户 mq_t1 的日志流信息，对应 `unit num` 为 2 和 `primary zone` 为 1，因此 日志流个数为 2。
 
    ```sql
-    obclient> select * from CDB_OB_LS where tenant_id = 1004;
+    obclient> SELECT * FROM oceanbase.CDB_OB_LS WHERE tenant_id = 1004;
     +-----------+-------+--------+----------------------------------------+---------------+-------------+---------------------+----------+---------------------+---------------------+
     | TENANT_ID | LS_ID | STATUS | PRIMARY_ZONE                           | UNIT_GROUP_ID | LS_GROUP_ID | CREATE_SCN          | DROP_SCN | SYNC_SCN            | READABLE_SCN        |
     +-----------+-------+--------+----------------------------------------+---------------+-------------+---------------------+----------+---------------------+---------------------+
@@ -59,16 +61,16 @@
     3 rows in set
    ```
 
-6. 修改租户 mq_t1 的 primary_zone 。
+6. 修改租户 mq_t1 的 primary_zone 属性，从 1 调整为 2 。
 
    ```sql
     ALTER TENANT mq_t1 primary_zone='sa128_obv4_1,sa128_obv4_2;sa128_obv4_3'; 
    ```
 
-7. 查看调整后租户 mq_t1 信息。
+7. 查询租户 mq_t1 的基本信息，确认 `primary_zone` 属性修改成功，由 `sa128_obv4_1` 变更为 `sa128_obv4_1,sa128_obv4_2` 。
 
    ```sql
-    obclient> select * from dba_ob_tenants where tenant_id = 1004;
+    obclient> SELECT * FROM oceanbase.DBA_OB_TENANTS WHERE tenant_id = 1004;
     +-----------+-------------+-------------+----------------------------+----------------------------+----------------------------------------+------------------------------------------------------------------+-------------------+--------------------+--------+---------------+--------+
     | TENANT_ID | TENANT_NAME | TENANT_TYPE | CREATE_TIME                | MODIFY_TIME                | PRIMARY_ZONE                           | LOCALITY                                                         | PREVIOUS_LOCALITY | COMPATIBILITY_MODE | STATUS | IN_RECYCLEBIN | LOCKED |
     +-----------+-------------+-------------+----------------------------+----------------------------+----------------------------------------+------------------------------------------------------------------+-------------------+--------------------+--------+---------------+--------+
@@ -77,10 +79,10 @@
     1 row in set
    ```
 
-8. 查看调整后租户 mq_t1 所拥有的 unit。
+8. 查询租户 mq_t1 的 unit 信息，变更前后 `unit num` 保持不变。
 
    ```sql
-    obclient> select * from dba_ob_units where tenant_id = 1004;
+    obclient> SELECT * FROM oceanbase.DBA_OB_UNITS WHERE tenant_id = 1004;
     +---------+-----------+--------+------------------+---------------+----------------------------+----------------------------+--------------+-------------+----------+---------------------+-----------------------+----------------+----------------+---------+---------+-------------+---------------+----------+----------+-------------+
     | UNIT_ID | TENANT_ID | STATUS | RESOURCE_POOL_ID | UNIT_GROUP_ID | CREATE_TIME                | MODIFY_TIME                | ZONE         | SVR_IP      | SVR_PORT | MIGRATE_FROM_SVR_IP | MIGRATE_FROM_SVR_PORT | MANUAL_MIGRATE | UNIT_CONFIG_ID | MAX_CPU | MIN_CPU | MEMORY_SIZE | LOG_DISK_SIZE | MAX_IOPS | MIN_IOPS | IOPS_WEIGHT |
     +---------+-----------+--------+------------------+---------------+----------------------------+----------------------------+--------------+-------------+----------+---------------------+-----------------------+----------------+----------------+---------+---------+-------------+---------------+----------+----------+-------------+
@@ -94,10 +96,10 @@
     6 rows in set
    ```
 
-9. 查看调整后租户 mq_t1 目前所拥有的日志流。
+9. 查询租户 mq_t1 的日志流信息，变更前为 2，变更后为 4。
 
    ```sql
-    obclient> select * from CDB_OB_LS where tenant_id = 1004;
+    obclient> SELECT * FROM oceanbase.CDB_OB_LS WHERE tenant_id = 1004;
     +-----------+-------+--------+----------------------------------------+---------------+-------------+---------------------+----------+---------------------+---------------------+
     | TENANT_ID | LS_ID | STATUS | PRIMARY_ZONE                           | UNIT_GROUP_ID | LS_GROUP_ID | CREATE_SCN          | DROP_SCN | SYNC_SCN            | READABLE_SCN        |
     +-----------+-------+--------+----------------------------------------+---------------+-------------+---------------------+----------+---------------------+---------------------+
@@ -110,4 +112,4 @@
     5 rows in set
    ```
 
-通过上述示例，将租户 mq_t1 的 Primary Zone 的 Zone 个数从 1 变更为 2 。变更前租户在每个 Zone 的 Unit 个数为 2，对应的日志流个数为 2；变更后租户在每个 Zone 的 Unit 个数保持不变，但对应的日志流个数变为 4 ，从而实现了租户扩容。
+通过上述示例，将租户 mq_t1 的 Primary Zone 的 Zone 个数从 1 变更为 2 。变更前租户在每个 Zone 的 Unit 个数为 2，对应的日志流个数为 2；变更后租户在每个 Zone 的 Unit 个数保持不变，但 Primary Zone 个数 从 1 变更为 2，从而对应的日志流个数变更为 4 。变更后租户的服务节点从 2 扩容为 4 ，从而实现了租户扩容。
