--- a/zh-CN/6.manage/3.replica-management/2.replica-distribution/2.common-operations/6.view-the-location-change-record.md
+++ b/zh-CN/6.manage/3.replica-management/2.replica-distribution/2.common-operations/6.view-the-location-change-record.md
@@ -1,6 +1,6 @@
 # 查看 locality 变更记录
 
-本文介绍如何通过视图 `oceanbase.DBA_OB_TENANT_JOBS` 查看租户的副本类型及分布。
+本文介绍如何通过视图 `oceanbase.DBA_OB_TENANT_JOBS` 查看租户的变更记录。
 
 关于视图 `oceanbase.DBA_OB_TENANT_JOBS` 的介绍可以详见视图 [oceanbase.DBA_OB_TENANT_JOBS](../../../../7.reference/5.system-reference/4.system-view-of-mysql-mode/2.dictionary-view-of-mysql-mode/57.oceanbase-dba_ob_tenant_jobs-of-mysql-mode.md) 。
 
