--- a/zh-CN/6.manage/3.replica-management/5.tenant-expansion-and-contraction/3.adjust-unit-number.md
+++ b/zh-CN/6.manage/3.replica-management/5.tenant-expansion-and-contraction/3.adjust-unit-number.md
@@ -1,6 +1,22 @@
-# 通过修改 Unit Number 扩容
+# 调整 Unit Number
 
 本文介绍如何通过修改 Unit Number ，达到租户扩缩容的功能。
+
+## 前提条件
+
+在进行租户的扩容和缩容操作前，需要进行以下操作：
+
+* 由于空闲的资源池会被计算为占用的资源，故在扩容前，如果有租户被删除，建议与租户对应的资源池也一并删除，以便释放资源。
+
+  删除资源池的相关操作请参见 [删除资源池](../../../7.reference/2.administrator-guide/2.basic-database-management/3.manage-resources/5.manage-resource-pools/7.delete-a-resource-pool.md)。
+
+* 进行租户缩容前，建议进行一轮转储以便释放租户正在使用的内存。
+
+  手动触发转储的相关操作请参见 [手动触发转储](../../../7.reference/2.administrator-guide/2.basic-database-management/5.manage-data-storage/1.dump-management/3.trigger-dump-manually.md)。
+
+* 查看集群中资源的分配情况，了解集群中资源的使用情况。
+
+  查看集群节点的资源总量和分配状态的相关操作请参见 [查看集群的资源信息](../../../7.reference/2.administrator-guide/2.basic-database-management/1.manage-clusters/10.view-the-resource-information-of-a-cluster.md)。
 
 ## 操作步骤
 
