--- a/zh-CN/6.manage/5.security-permissions/2.authentication-and-authentication/3.security-permissions-oracle-mode/3.Login-failure-handling-of-oracle-mode.md
+++ b/zh-CN/6.manage/5.security-permissions/2.authentication-and-authentication/3.security-permissions-oracle-mode/3.Login-failure-handling-of-oracle-mode.md
@@ -16,7 +16,7 @@ Profile 文件对密码提供了两个参数来实现连续登录失败后锁定
 * 用户锁定：每次因密码不正确登录失败，如果检查失败次数达到阈值，则触发锁定用户。
 * 用户解锁：如果登录用户被锁定，再次登录时，系统会检查锁定时间，如果锁定时间已达到，系统会进行解锁，然后重新尝试登录。如果锁定时间未到，系统会报错，您也可以利用 SQL 语句解锁用户。
 
-## 操作示例
+## 实现方式
 
 管理员可以通过创建 Profile 并将其应用给用户的方式来实现用户密码的失败处理。主要包含以下两步：
 
@@ -160,9 +160,10 @@ Profile 文件对密码提供了两个参数来实现连续登录失败后锁定
 
 6. 执行以下 SQL 语句，解锁用户。
 
-   >**注意**
-   >
-   >解锁用户的操作一般由管理员完成，普通用户如果需要执行锁定和解锁操作，必须具备全局的 `ALTER USER` 权限。查看用户权限和授权的相关操作请参见 [查看用户权限](../2.oracle-3/4.view-user-permissions.md) 和 [修改用户权限](../2.oracle-3/5.modify-user-permissions-1.md)。
+   <main id="notice" type='notice'>
+    <h4>注意</h4>
+    <p>解锁用户的操作一般由管理员完成，普通用户如果需要执行锁定和解锁操作，必须具备全局的 <code>ALTER USER</code> 权限。查看用户权限和授权的相关操作请参见 <a href="../2.oracle-3/4.view-user-permissions.md">查看用户权限</a> 和<a href="../2.oracle-3/5.modify-user-permissions-1.md">修改用户权限</a>
+    </main>
 
    ```sql
    obclient> ALTER USER secuser ACCOUNT UNLOCK;
