--- a/zh-CN/6.manage/5.security-permissions/2.authentication-and-authentication/2.security-permissions-mysql-mode/2.password-complexity-of-mysql-mode.md
+++ b/zh-CN/6.manage/5.security-permissions/2.authentication-and-authentication/2.security-permissions-mysql-mode/2.password-complexity-of-mysql-mode.md
@@ -6,6 +6,8 @@
 
 为了防止恶意的密码攻击，OceanBase 数据库用户可以根据需要设置密码的复杂度函数，验证用户登录身份，来提升数据库的安全性。
 
+## 相关变量介绍
+
 OceanBase 数据库 MySQL 模式下，用户可以通过设置一系列系统变量规定密码复杂度规则，这些配置是租户级的。创建用户或修改用户的密码时会根据系统变量的配置对密码进行校验，未通过校验则会报错。涉及的系统变量如下表所示：
 
 |   变量名   |    功能  |   使用说明    |
@@ -17,7 +19,7 @@ OceanBase 数据库 MySQL 模式下，用户可以通过设置一系列系统变
 |validate_password_policy|设置密码检查策略| <ul><li>LOW 策略仅包含密码长度检测。</li><li>MEDIUM 策略包括密码长度检测、大写字母个数检测、小写字母个数检测、数字个数检测、特殊字符个数检测、用户名密码相同检测。|
 validate_password_special_char_count|用户密码至少包含的特殊字符个数|-|
 
-## 配置示例
+## 操作步骤
 
 本节以设置密码复杂度规则为最小长度为 8 个字符，至少包含 3 个大写字母、3 个小写字母和 1 个特殊字符、用户密码可以与用户名相同并且检查策略为 `medium` 为例，提供设置密码复杂度的操作指导。
 
