--- a/zh-CN/7.reference/2.administrator-guide/5.backup-and-recovery/2.backup-and-restoration-management/4.data-backup/1.preparation-before-data-backup.md
+++ b/zh-CN/7.reference/2.administrator-guide/5.backup-and-recovery/2.backup-and-restoration-management/4.data-backup/1.preparation-before-data-backup.md
@@ -4,11 +4,15 @@
 
 ## 配置备份目的端
 
-1. 使用 `root` 用户登录数据库的 `sys` 租户。
+1. 用户租户的租户管理员登录数据库。
+
+   >**说明**
+   >
+   >MySQL 模式的管理员用户为 `root` 用户，Oracle 模式的管理员用户为 `SYS` 用户。
 
 2. 配置备份目的端。
 
-   目前，OceanBase 数据库支持 NFS 、阿里云 OSS 作为备份目的端。
+   目前，OceanBase 数据库支持 NFS、阿里云 OSS 作为备份目的端。
 
    例如：
   
@@ -30,6 +34,10 @@
       obclient> ALTER SYSTEM SET data_backup_dest='file:///data/nfs/backup/data';
       ```
 
+      >**说明**
+      >
+      >如果是通过 `sys` 租户配置备份目的端，则需要在语句中指定待发起备份的用户租户名（不能指定 `sys` 租户），例如：`ALTER SYSTEM SET data_backup_dest='file:///data/nfs/backup/data' TENANT = mysql_tenant;`。
+
    * 阿里云 OSS
 
       当使用 OSS 作为备份目的端时，除了设置备份目的端，您还可以通过 `delete_mode` 参数来配置备份文件的清理模式。
@@ -49,8 +57,18 @@
       设置备份目的端并配置备份文件的清理模式的示例如下：
 
       ```sql
-      obclient> ALTER SYSTEM SET data_backup_dest='oss://oceanbase-test-bucket/backup/?host=xxx.aliyun-inc.com&access_id=xxx&access_key=xxx&delete_mode=delete';
+      obclient> ALTER SYSTEM SET data_backup_dest='oss://oceanbase-test-bucket/backup/?
+      host=xxx.aliyun-inc.com&access_id=xxx&access_key=xxx&delete_mode=delete';
       ```
+
+3. 配置成功后，`SYS` 租户可通过视图 `CDB_OB_BACKUP_PARAMETER` 查看当前集群中各租户的备份路径等信息。
+
+   ```sql
+   obclient> select * from cdb_ob_backup_parameter\G
+   TENANT_ID: 1002
+   NAME: data_backup_dest
+   VALUE: file:///data/nfs/backup/data
+   ```
 
 ## 注意事项及说明
 
