--- a/zh-CN/7.reference/2.administrator-guide/5.backup-and-recovery/2.backup-and-restoration-management/6.restore-data/4.view-the-restore-progress.md
+++ b/zh-CN/7.reference/2.administrator-guide/5.backup-and-recovery/2.backup-and-restoration-management/6.restore-data/4.view-the-restore-progress.md
@@ -15,60 +15,50 @@
 3. 执行以下语句，查看恢复进度。  
 
    ```sql
-    obclient> SELECT * FROM CDB_OB_RESTORE_PROGRESS\G
-    *************************** 1. row ***************************
-                            TENANT_ID: 1
-                               JOB_ID: 1
-                  RESTORE_TENANT_NAME: mysql
-                    RESTORE_TENANT_ID: 1002
-                   BACKUP_TENANT_NAME: backup_tenant
-                     BACKUP_TENANT_ID: 1002
-                  BACKUP_CLUSTER_NAME: backup_cluster
-                          TENANT_ROLE: PRIMARY_TENANT
-                          BACKUP_DEST: file:///data/nfs/backup//archive,file:///data/nfs/backup/data
-                       RESTORE_OPTION: pool_list=small_pool_2&primary_zone=z1
-                          RESTORE_SCN: 1658285759724047000
-                  RESTORE_SCN_DISPLAY: 2022-06-1 02:55:59.724047
-                               STATUS: WAIT_TENANT_RESTORE_FINISH
-                      START_TIMESTAMP: 2022-06-1 10:58:33.689560
-                      BACKUP_SET_LIST: file:///data/nfs/backup/data/backup_set_1_full
-                    BACKUP_PIECE_LIST: file:///data/nfs/backup/archive/2_1_2,file:///data/nfs/backup/archive/2_1_3
-                    MAJOR_BLOCK_BYTES: NULL
-            MAJOR_BLOCK_BYTES_DISPLAY: NULL
-             FINISH_MAJOR_BLOCK_BYTES: NULL
-     FINISH_MAJOR_BLOCK_BYTES_DISPLAY: NULL
-                    MINOR_BLOCK_BYTES: NULL
-            MINOR_BLOCK_BYTES_DISPLAY: NULL
-             FINISH_MINOR_BLOCK_BYTES: NULL
-     FINISH_MINOR_BLOCK_BYTES_DISPLAY: NULL
-                          DESCRIPTION:
-    *************************** 2. row ***************************
-                            TENANT_ID: 1002
-                               JOB_ID: 1
-                  RESTORE_TENANT_NAME: mysql
-                    RESTORE_TENANT_ID: 1002
-                   BACKUP_TENANT_NAME: backup_tenant
-                     BACKUP_TENANT_ID: 1002
-                  BACKUP_CLUSTER_NAME: backup_cluster
-                          TENANT_ROLE: PRIMARY_TENANT
-                          BACKUP_DEST: file:///data/nfs/backup//archive,file:///data/nfs/backup/data
-                       RESTORE_OPTION: pool_list=small_pool_2&primary_zone=z1
-                          RESTORE_SCN: 1658285759724047000
-                  RESTORE_SCN_DISPLAY: 2022-06-1 02:55:59.724047
-                               STATUS: RESTORE_WAIT_LS
-                      START_TIMESTAMP: 2022-06-1 10:58:33.689560
-                      BACKUP_SET_LIST: file:///data/nfs/backup/data/backup_set_1_full
-                    BACKUP_PIECE_LIST: file:///data/nfs/backup/archive/2_1_2,file:///data/nfs/backup/archive/2_1_3
-                    MAJOR_BLOCK_BYTES: 0
-            MAJOR_BLOCK_BYTES_DISPLAY: 0.00MB
-             FINISH_MAJOR_BLOCK_BYTES: 0
-     FINISH_MAJOR_BLOCK_BYTES_DISPLAY: 0.00MB
-                    MINOR_BLOCK_BYTES: 0
-            MINOR_BLOCK_BYTES_DISPLAY: 0.00MB
-             FINISH_MINOR_BLOCK_BYTES: 0
-     FINISH_MINOR_BLOCK_BYTES_DISPLAY: 0.00MB
-                          DESCRIPTION:
-    2 rows in set
+   obclient> SELECT * FROM CDB_OB_RESTORE_PROGRESS\G
+   *************************** 1. row ***************************
+                         TENANT_ID: 1
+                            JOB_ID: 1
+               RESTORE_TENANT_NAME: mysql
+                 RESTORE_TENANT_ID: 1002
+                BACKUP_TENANT_NAME: backup_tenant
+                  BACKUP_TENANT_ID: 1002
+               BACKUP_CLUSTER_NAME: backup_cluster
+                       BACKUP_DEST: file:///data/nfs/backup//archive,file:///data/nfs/backup/data
+                    RESTORE_OPTION: pool_list=small_pool_2&primary_zone=z1
+                       RESTORE_SCN: 1658285759724047000
+               RESTORE_SCN_DISPLAY: 2022-06-1 02:55:59.724047
+                            STATUS: WAIT_TENANT_RESTORE_FINISH
+                   START_TIMESTAMP: 2022-06-1 10:58:33.689560
+                   BACKUP_SET_LIST: file:///data/nfs/backup/data/backup_set_1_full
+                 BACKUP_PIECE_LIST: file:///data/nfs/backup/archive/2_1_2,file:///data/nfs/backup/archive/2_1_3
+                       TOTAL_BYTES: NULL
+               TOTAL_BYTES_DISPLAY: NULL
+                      FINISH_BYTES: NULL
+              FINISH_BYTES_DISPLAY: NULL
+                       DESCRIPTION:
+   *************************** 2. row ***************************
+                         TENANT_ID: 1002
+                            JOB_ID: 1
+               RESTORE_TENANT_NAME: mysql
+                 RESTORE_TENANT_ID: 1002
+                BACKUP_TENANT_NAME: backup_tenant
+                  BACKUP_TENANT_ID: 1002
+               BACKUP_CLUSTER_NAME: backup_cluster
+                       BACKUP_DEST: file:///data/nfs/backup//archive,file:///data/nfs/backup/data
+                    RESTORE_OPTION: pool_list=small_pool_2&primary_zone=z1
+                       RESTORE_SCN: 1658285759724047000
+               RESTORE_SCN_DISPLAY: 2022-06-1 02:55:59.724047
+                            STATUS: RESTORE_WAIT_LS
+                   START_TIMESTAMP: 2022-06-1 10:58:33.689560
+                   BACKUP_SET_LIST: file:///data/nfs/backup/data/backup_set_1_full
+                 BACKUP_PIECE_LIST: file:///data/nfs/backup/archive/2_1_2,file:///data/nfs/backup/archive/2_1_3
+                       TOTAL_BYTES: 313158553
+               TOTAL_BYTES_DISPLAY: 298.65MB
+                      FINISH_BYTES: 0
+              FINISH_BYTES_DISPLAY: 0.00MB
+                       DESCRIPTION:
+   2 rows in set
    ```
 
    该视图记录了恢复时用户输入的相关参数，以及恢复的进度等信息。
