--- a/zh-CN/7.reference/2.administrator-guide/5.backup-and-recovery/2.backup-and-restoration-management/4.data-backup/8.views-of-data-backup.md
+++ b/zh-CN/7.reference/2.administrator-guide/5.backup-and-recovery/2.backup-and-restoration-management/4.data-backup/8.views-of-data-backup.md
@@ -1,297 +1,161 @@
-# 清理备份相关视图介绍
+# 数据备份相关视图介绍
 
-## CDB_OB_BACKUP_DELETE_JOBS
+OceanBase 数据库支持通过各视图查看备份的进度与结果。
 
-系统租户可通过该视图查看所有租户正在执行的备份清理任务的进展。
+## CDB_OB_BACKUP_JOBS
 
-|  字段 | 类型  |  描述 |
-|------|-------|-------|
-| TENANT_ID                 |  bigint(20) |   租户 ID |
-| JOB_ID                    |  bigint(20) |   执行清理任务所属 JOB_ID，各租户间独立 |
-| INCARNATION               |  bigint(20) |   分身 ID |
-| INITIATOR_TENANT_ID       |  bigint(20) |   发起清理任务的租户 ID |
-| INITIATOR_JOB_ID          |  bigint(20) |   发起清理任务所属 JOB_ID |
-| EXECUTOR_TENANT_ID        |  varchar(65536) |   执行清理任务的租户 ID 列表 |
-| TYPE                      |  varchar(64) |   清理类型：<ul><li> DELETE OBSOLETE BACKUP : 过期清理</li></ul>|
-| PARAMETER                 |  timestamp(6) |   清理参数，记录过期时间 |
-| JOB_LEVEL                 |  varchar(64) |   任务发起级别: <ul><li> `USER_TENANT` ：用户租户发起的任务</li><li> `SYS_TENANT` ：系统租户发起的任务</li></ul>|
-| START_TIMESTAMP           |  timestamp(6) |   任务开始时租户当前时间 |
-| END_TIMESTAMP             |  timestamp(6) |   任务结束时租户当前时间 |
-| STATUS                    |  varchar(64) |    任务状态： <ul><li> `INIT` ：任务初始化阶段 </li><li> `DOING` ：任务执行阶段 </li><li> `CANCELING` ：任务被取消阶段 </li><li> `COMPLETED` : 任务执行成功 </li><li> `FAILED` ：任务执行失败 </li><li> `CANCELED` ：任务成功被取消 </li></ul> |
-| TASK_COUNT                |  bigint(20) |   总的 backup_set/backup_piece 任务数 |
-| SUCCESS_TASK_COUNT        |  bigint(20) |  成功的 backup_set/backup_piece 任务数 |
-| RESULT                    |  bigint(20) |   执行结果，显示错误码|
-| COMMENT                   |  varchar(4096) |   清理任务失败记录的描述信息|
-
-## DBA_OB_BACKUP_DELETE_JOBS
-
-用户租户可通过该视图查看所在租户正在执行的备份清理任务的进展。
-
-* MySQL 模式
-
-    |  字段 | 类型  |  描述 |
-    |------|-------|-------|
-    | JOB_ID                    |  bigint(20) |   执行清理任务所属 JOB_ID，各租户间独立 |
-    | INCARNATION               |  bigint(20) |   分身 ID |
-    | INITIATOR_TENANT_ID       |  bigint(20) |   发起清理任务的租户 ID |
-    | INITIATOR_JOB_ID          |  bigint(20) |   发起清理任务所属 JOB_ID |
-    | EXECUTOR_TENANT_ID        |  varchar(65536) |   执行清理任务的租户 ID 列表 |
-    | TYPE                      |  varchar(64) |   清理类型：<ul><li> DELETE OBSOLETE BACKUP ：过期清理</li></ul>|
-    | PARAMETER                 |  timestamp(6) |   清理参数，记录过期时间 |
-    | JOB_LEVEL                 |  varchar(64) |   任务发起级别：<ul><li> `USER_TENANT` ：用户租户发起的任务</li><li> `SYS_TENANT` ：系统租户发起的任务</li></ul>|
-    | START_TIMESTAMP           |  timestamp(6) |   任务开始时租户当前时间 |
-    | END_TIMESTAMP             |  timestamp(6) |   任务结束时租户当前时间 |
-    | STATUS                    |  varchar(64) |    任务状态： <ul><li> `INIT` ：任务初始化阶段 </li><li> `DOING` ：任务执行阶段 </li><li> `CANCELING` ：任务被取消阶段 </li><li> `COMPLETED` : 任务执行成功 </li><li> `FAILED` ：任务执行失败 </li><li> `CANCELED` ：任务成功被取消 </li></ul> |
-    | TASK_COUNT                |  bigint(20) |   总的 backup_set/backup_piece 任务数 |
-    | SUCCESS_TASK_COUNT        |  bigint(20) |  成功的 backup_set/backup_piece 任务数 |
-    | RESULT                    |  bigint(20) |   执行结果，显示错误码 |
-    | COMMENT                   |  varchar(4096) |   清理任务失败记录的描述信息 |
-
-* Oracle 模式
-
-    |  字段 | 类型  |  描述 |
-    |------|-------|-------|
-    | JOB_ID                    |  NUMBER(38) |   执行清理任务所属 JOB_ID，各租户间独立 |
-    | INCARNATION               |  NUMBER(38) |   分身 ID |
-    | INITIATOR_TENANT_ID       |  NUMBER(38)|   发起清理任务的租户 ID |
-    | INITIATOR_JOB_ID          |  NUMBER(38) |   发起清理任务所属 JOB_ID |
-    | EXECUTOR_TENANT_ID        |  VARCHAR2(65536) |   执行清理任务的租户 ID 列表 |
-    | TYPE                      |  VARCHAR2(64) |   清理类型：<ul><li> DELETE OBSOLETE BACKUP ：过期清理</li></ul>|
-    | PARAMETER                 |  VARCHAR2(1024) |   清理参数，记录过期时间 |
-    | JOB_LEVEL                 |  VARCHAR2(64)|   任务发起级别：<ul><li> `USER_TENANT` ：用户租户发起的任务</li><li> `SYS_TENANT` ：系统租户发起的任务</li></ul>|
-    | START_TIMESTAMP           |  VARCHAR2(256) |   任务开始时租户当前时间 |
-    | END_TIMESTAMP             |  VARCHAR2(256) |   任务结束时租户当前时间 |
-    | STATUS                    |  VARCHAR2(64) |    任务状态：<ul><li> `INIT` ：任务初始化阶段 </li><li> `DOING` ：任务执行阶段 </li><li> `CANCELING` ：任务被取消阶段 </li><li> `COMPLETED` : 任务执行成功 </li><li> `FAILED` ：任务执行失败 </li><li> `CANCELED` ：任务成功被取消 </li></ul> |
-    | TASK_COUNT                |  NUMBER(38) |   总的 backup_set/backup_piece 任务数 |
-    | SUCCESS_TASK_COUNT        |  NUMBER(38) |  成功的 backup_set/backup_piece 任务数 |
-    | RESULT                    |  NUMBER(38) |   执行结果，显示错误码 |
-    | COMMENT                   |  VARCHAR2(4096) |   清理任务失败记录的描述信息 |
-
-## CDB_OB_BACKUP_DELETE_JOB_HISTORY
-
-系统租户可通过该视图查看所有租户已结束的备份清理任务的历史信息。
+`oceanbase.CDB_OB_BACKUP_JOBS` 用于展示各租户 Job 级数据备份的进度。
 
 |  字段 | 类型  |  描述 |
-|------|-------|-------|
-| TENANT_ID                 |  bigint(20) |   租户 ID |
-| JOB_ID                    |  bigint(20) |   执行清理任务所属 JOB_ID，各租户间独立 |
-| INCARNATION               |  bigint(20) |   分身 ID |
-| INITIATOR_TENANT_ID       |  bigint(20) |   发起清理任务的租户 ID |
-| INITIATOR_JOB_ID          |  bigint(20) |   发起清理任务所属 JOB_ID |
-| EXECUTOR_TENANT_ID        |  varchar(65536) |   执行清理任务的租户 ID 列表 |
-| TYPE                      |  varchar(64) |   清理类型：<ul><li> DELETE OBSOLETE BACKUP ：过期清理</li></ul>|
-| PARAMETER                 |  timestamp(6) |   清理参数，记录过期时间 |
-| JOB_LEVEL                 |  varchar(64) |   任务发起级别：<ul><li> `USER_TENANT` ：用户租户发起的任务</li><li> `SYS_TENANT` ：系统租户发起的任务</li></ul>|
-| START_TIMESTAMP           |  timestamp(6) |   任务开始时租户当前时间 |
-| END_TIMESTAMP             |  timestamp(6) |   任务结束时租户当前时间 |
-| STATUS                    |  varchar(64) |    任务状态： <ul><li> `INIT` ：任务初始化阶段 </li><li> `DOING` ：任务执行阶段 </li><li> `CANCELING` ：任务被取消阶段 </li><li> `COMPLETED` : 任务执行成功 </li><li> `FAILED` ：任务执行失败 </li><li> `CANCELED` ：任务成功被取消 </li></ul> |
-| TASK_COUNT                |  bigint(20) |   总的 backup_set/backup_piece 任务数 |
-| SUCCESS_TASK_COUNT        |  bigint(20) |  成功的 backup_set/backup_piece 任务数 |
-| RESULT                    |  bigint(20) |   执行结果，显示错误码 |
-| COMMENT                   |  varchar(4096) |   清理任务失败记录的描述信息 |
+|----------------------------------|---------------------|--------------|
+| TENANT_ID                        | bigint(20)          | 执行备份任务的租户 ID|
+| JOB_ID                           | bigint(20)          | 备份任务所属的 job_id, 对应一次备份任务 |
+| INCARNATION                      | bigint(20)          | 分身 ID |
+| BACKUP_SET_ID                    | bigint(20)          | 备份集 ID |
+| INITIATOR_TENANT_ID              | varchar(65536)      | 发起此次 Job 的租户 ID |
+| INITIATOR_JOB_ID                 | bigint(20)          | 发起此次 Job 的租户所属的 job_id|
+| EXECUTOR_TENANT_ID               | varchar(65536)      | 此次 Job 对应的需要备份的 tenant_id  |
+| PLUS_ARCHIVELOG                  | varchar(4096)       | 是否开启日志补齐功能：<ul><li>ON：开启日志补齐功能</li><li>OFF：关闭日志补齐功能</li></ul> |
+| BACKUP_TYPE                      | varchar(4096)       | 备份类型：<ul><li>D：表示全量备份</li><li>I：表示增量备份</li></ul>|
+| JOB_LEVEL                        | varchar(4096)       | Job 任务发起的级别：<ul><li>CLUSTER：sys 租户发起所有租户的备份任务</li><li>SYS_TENANT：sys 租户发起的指定租户的备份任务</li><li>USER_TENANT：普通租户发起自身的备份</li></ul>  |
+| ENCRYPTION_MOD                   | varchar(4096)       | 加密模式：<ul><li>None：表示不加密 </li><li>Password：表示只使用密码保护 </li><li>Password Encryption ：表示加密，并且使用密码保护 </li><li >Transparent Encryption：表示使用 TDE 加密 </li><li>Dual mode Encryption ：表示使用 TDE 加密以及密码保护</li></ul></br>目前仅支持 None 和 Password 两种模式。 |
+| PASSWD                           | varchar(4096)       | 备份集的加密密码 |
+| START_TIMESTAMP                  | timestamp(6)        | Job 级备份任务的开始时间 |
+| END_TIMESTAMP                    | timestamp(6)        | Job 级备份任务的结束时间 |
+| STATUS                           | varchar(4096)       | 备份任务的状态 |
+| RESULT                           | bigint(20)          | 任务错误码 |
+| COMMENT                          | longtext            | 错误码描述 |
 
-## DBA_OB_BACKUP_DELETE_JOB_HISTORY
+## CDB_OB_BACKUP_JOB_HISTORY
 
-用户租户可通过该视图查看所在租户已结束的备份清理任务的历史信息。
-
-* MySQL 模式
-
-    |  字段 | 类型  |  描述 |
-    |------|-------|-------|
-    | JOB_ID                    |  bigint(20) |   执行清理任务所属 JOB_ID，各租户间独立 |
-    | INCARNATION               |  bigint(20) |   分身 ID |
-    | INITIATOR_TENANT_ID       |  bigint(20) |   发起清理任务的租户 ID |
-    | INITIATOR_JOB_ID          |  bigint(20) |   发起清理任务所属 JOB_ID |
-    | EXECUTOR_TENANT_ID        |  varchar(65536) |   执行清理任务的租户 ID 列表 |
-    | TYPE                      |  varchar(64) |   清理类型：<ul><li> DELETE OBSOLETE BACKUP ：过期清理</li></ul>|
-    | PARAMETER                 |  timestamp(6) |   清理参数，记录过期时间|
-    | JOB_LEVEL                 |  varchar(64) |   任务发起级别：<ul><li> `USER_TENANT` ：用户租户发起的任务</li><li> `SYS_TENANT` ：系统租户发起的任务</li></ul>|
-    | START_TIMESTAMP           |  timestamp(6) |   任务开始时租户当前时间 |
-    | END_TIMESTAMP             |  timestamp(6) |   任务结束时租户当前时间 |
-    | STATUS                    |  varchar(64) |    任务状态： <ul><li> `INIT` ：任务初始化阶段 </li><li> `DOING` ：任务执行阶段 </li><li> `CANCELING` ：任务被取消阶段 </li><li> `COMPLETED` : 任务执行成功 </li><li> `FAILED` ：任务执行失败 </li><li> `CANCELED` ：任务成功被取消 </li></ul> |
-    | TASK_COUNT                |  bigint(20) |   总的 backup_set/backup_piece 任务数 |
-    | SUCCESS_TASK_COUNT        |  bigint(20) |  成功的 backup_set/backup_piece 任务数 |
-    | RESULT                    |  bigint(20) |   执行结果，显示错误码 |
-    | COMMENT                   |  varchar(4096) |   清理任务失败记录的描述信息 |
-
-* Oracle 模式
-
-    |  字段 | 类型  |  描述 |
-    |------|-------|-------|
-    | JOB_ID                    |  NUMBER(38)|   执行清理任务所属 JOB_ID，各租户间独立 |
-    | INCARNATION               |  NUMBER(38) |   分身 ID |
-    | INITIATOR_TENANT_ID       |  NUMBER(38) |   发起清理任务的租户 ID |
-    | INITIATOR_JOB_ID          |  NUMBER(38) |   发起清理任务所属 JOB_ID |
-    | EXECUTOR_TENANT_ID        |  VARCHAR2(65536)|   执行清理任务的租户 ID 列表 |
-    | TYPE                      |  VARCHAR2(64) |   清理类型：<ul><li> DELETE OBSOLETE BACKUP ：过期清理</li></ul>|
-    | PARAMETER                 |  VARCHAR2(1024) |   清理参数，记录过期时间 |
-    | JOB_LEVEL                 |  VARCHAR2(64) |   任务发起级别： <ul><li> `USER_TENANT` ：用户租户发起的任务</li><li> `SYS_TENANT` ：系统租户发起的任务</li></ul>|
-    | START_TIMESTAMP           |  VARCHAR2(256) |   任务开始时租户当前时间 |
-    | END_TIMESTAMP             |  VARCHAR2(256) |   任务结束时租户当前时间 |
-    | STATUS                    |  VARCHAR2(64) |    任务状态：<ul><li> `INIT` : 任务初始化阶段 </li><li> `DOING` ：任务执行阶段 </li><li> `CANCELING` ：任务被取消阶段 </li><li> `COMPLETED` : 任务执行成功 </li><li> `FAILED` ：任务执行失败 </li><li> `CANCELED` ：任务成功被取消 </li></ul> |
-    | TASK_COUNT                |  NUMBER(38) |   总的 backup_set/backup_piece 任务数 |
-    | SUCCESS_TASK_COUNT        |  NUMBER(38)|  成功的 backup_set/backup_piece 任务数 |
-    | RESULT                    |  NUMBER(38) |   执行结果，显示错误码 |
-    | COMMENT                   |  VARCHAR2(4096) |   清理任务失败记录的描述信息 |
-
-## CDB_OB_BACKUP_DELETE_TASKS
-
-系统租户可通过该视图查看所有租户正在执行的`backup_set/backup_piece`备份清理任务的进展。
+`oceanbase.CDB_OB_BACKUP_JOB_HISTORY` 用于展示各租户 Job 级数据备份的历史信息。
 
 |  字段 | 类型  |  描述 |
-|------|-------|-------|
-| TENANT_ID           |  bigint(20) |   租户 ID |
-| TASK_ID             |  bigint(20) |   任务 ID，一个任务对应清理一个 `backup_set/backup_piece` |
-| INCARNATION         |  bigint(20) |   分身 ID |
-| JOB_ID              |  bigint(20) |   任务所属 JOB_ID |
-| TASK_TYPE           |  varchar(64) |   任务类型：<ul><li> BACKUP SET ：清理 `backup_set`</li><li>BACKUP PIECE ：清理 `backup_piece`</li></ul>|
-| ID                  |  bigint(20) |   清理的 `backup_set/backup_piece` ID |
-| ROUND_ID            |  bigint(20)) |   任务类型为 BACKUP PIECE 时所属的日志归档轮次 |
-| DEST_ID             |  bigint(20) |   备份所在目的端的 dest_id |
-| START_TIMESTAMP     |  timestamp(6) |   任务开始时租户当前时间 |
-| END_TIMESTAMP       |  timestamp(6) |   任务结束时租户当前时间 |
-| STATUS              |  varchar(64) |    任务状态： <ul><li> `INIT` ：任务初始化阶段 </li><li> `DOING` ：任务执行阶段 </li><li> `CANCELING` ：任务被取消阶段 </li><li> `COMPLETED`：任务执行成功 </li><li> `FAILED` ：任务执行失败 </li><li> `CANCELED` ：任务成功被取消 </li></ul>|
-| TOTAL_LS_COUNT      |  bigint(20) |  任务下总的日志流数目 |
-| FINISH_LS_COUNT    |  bigint(20) |   清理成功的日志流任务数目 |
-| RESULT              |  bigint(20) |   任务结果，显示错误码 |
-| COMMENT             |  varchar(4096) |   清理任务失败记录的描述信息 |
-| PATH                |  varchar(1024) |   备份所在目的端路径信息 |
+|----------------------------------|---------------------|--------------|
+| TENANT_ID                        | bigint(20)          | 执行备份任务的租户 ID |
+| JOB_ID                           | bigint(20)          | 备份任务所属的 job_id, 对应一次备份任务 |
+| INCARNATION                      | bigint(20)          | 分身 ID |
+| BACKUP_SET_ID                    | bigint(20)          | 备份集 ID |
+| INITIATOR_TENANT_ID              | varchar(65536)      | 发起此次 Job 的租户 ID |
+| INITIATOR_JOB_ID                 | bigint(20)          | 发起此次 Job 的租户所属的 job_id |
+| EXECUTOR_TENANT_ID               | varchar(65536)      | 此次 Job 对应的需要备份的 tenant_id  |
+| PLUS_ARCHIVELOG                  | varchar(4096)       | 是否开启日志补齐功能：<ul><li>ON：开启日志补齐功能</li><li>OFF：关闭日志补齐功能</li></ul> |
+| BACKUP_TYPE                      | varchar(4096)       | 备份类型：<ul><li>D：表示全量备份</li><li>I：表示增量备份</li></ul>|
+| JOB_LEVEL                        | varchar(4096)       | Job 任务发起的级别：<ul><li>CLUSTER：sys 租户发起所有租户的备份任务</li><li>SYS_TENANT：sys 租户发起的指定租户的备份任务</li><li>USER_TENANT：普通租户发起自身的备份</li></ul> |
+| ENCRYPTION_MOD                   | varchar(4096)       |  加密模式：<ul><li>None：表示不加密 </li><li>Password：表示只使用密码保护 </li><li>Password Encryption ：表示加密，并且使用密码保护 </li><li >Transparent Encryption：表示使用 TDE 加密 </li><li>Dual mode Encryption ：表示使用 TDE 加密以及密码保护</li></ul></br>目前仅支持 None 和 Password 两种模式。|
+| PASSWD                           | varchar(4096)       | 备份集的加密密码 |
+| START_TIMESTAMP                  | timestamp(6)        | Job 级备份任务的开始时间 |
+| END_TIMESTAMP                    | timestamp(6)        | Job 级备份任务的结束时间 |
+| STATUS                           | varchar(4096)       | 备份任务的状态 |
+| RESULT                           | bigint(20)          | 任务错误码 |
+| COMMENT                          | longtext            | 错误码描述 |
 
-## DBA_OB_BACKUP_DELETE_TASKS
+## CDB_OB_BACKUP_TASKS
 
-用户租户可通过该视图查看所在租户正在执行的 `backup_set/backup_piece` 备份清理任务的进展。
-
-* MySQL 模式
-
-    |  字段 | 类型  |  描述 |
-    |------|-------|-------|
-    | TASK_ID             |  bigint(20) |   任务 ID，一个任务对应清理一个 `backup_set/backup_piece` |
-    | INCARNATION         |  bigint(20) |   分身 ID |
-    | JOB_ID              |  bigint(20) |   任务所属 JOB_ID |
-    | TASK_TYPE           |  varchar(64) |   任务类型： <ul><li> BACKUP SET ：清理 `backup_set` </li><li>BACKUP PIECE ：清理 `backup_piece`</li></ul>|
-    | ID                  |  bigint(20) |   清理的 `backup_set/backup_piece` ID |
-    | ROUND_ID            |  bigint(20) |   任务类型为 BACKUP PIECE 时所属的日志归档轮次 |
-    | DEST_ID             |  bigint(20) |   备份所在目的端的 dest_id |
-    | START_TIMESTAMP     |  timestamp(6) |   任务开始时租户当前时间 |
-    | END_TIMESTAMP       |  timestamp(6) |   任务结束时租户当前时间 |
-    | STATUS              |  varchar(64) |    任务状态: <ul><li> `INIT` ：任务初始化阶段 </li><li> `DOING` ：任务执行阶段 </li><li> `CANCELING` ：任务被取消阶段 </li><li> `COMPLETED` ：任务执行成功 </li><li> `FAILED` ：任务执行失败 </li><li> `CANCELED` ：任务成功被取消 </li></ul>|
-    | TOTAL_LS_COUNT      |  bigint(20) |  任务下总的日志流数目 |
-    | FINISH_LS_COUNT    |  bigint(20) |   清理成功的日志流任务数目 |
-    | RESULT              |  bigint(20) |   任务结果，显示错误码 |
-    | COMMENT             |  varchar(4096) |   清理任务失败记录的描述信息 |
-    | PATH                |  varchar(1024) |   备份所在目的端路径信息 |
-
-* Oracle 模式
-
-    |  字段 | 类型  |  描述 |
-    |------|-------|-------|
-    | TASK_ID             |  NUMBER(38) |   任务 ID，一个任务对应清理一个 `backup_set/backup_piece` |
-    | INCARNATION         |  NUMBER(38) |   分身 ID |
-    | JOB_ID              |  NUMBER(38) |   任务所属 JOB_ID |
-    | TASK_TYPE           |  VARCHAR2(64) |   任务类型： <ul><li> BACKUP SET ：清理`backup_set`</li><li>BACKUP PIECE ：清理`backup_piece`</li></ul>|
-    | ID                  |  NUMBER(38) |   清理的 `backup_set/backup_piece` ID |
-    | ROUND_ID            |  NUMBER(38) |   任务类型为 BACKUP PIECE 时所属的日志归档轮次 |
-    | DEST_ID             |  NUMBER(38)|   备份所在目的端的 dest_id |
-    | START_TIMESTAMP     |  VARCHAR2(256) |   任务开始时租户当前时间 |
-    | END_TIMESTAMP       |  VARCHAR2(256)|   任务结束时租户当前时间 |
-    | STATUS              |  VARCHAR2(64) |    任务状态： <ul><li> `INIT` ：任务初始化阶段 </li><li> `DOING` ：任务执行阶段 </li><li> `CANCELING` ：任务被取消阶段 </li><li> `COMPLETED` ：任务执行成功 </li><li> `FAILED` ：任务执行失败 </li><li> `CANCELED` ：任务成功被取消 </li></ul>|
-    | TOTAL_LS_COUNT      |  NUMBER(38)|  任务下总的日志流数目 |
-    | FINISH_LS_COUNT     |  NUMBER(38)|   清理成功的日志流任务数目 |
-    | RESULT              |  NUMBER(38)|   任务结果，显示错误码 |
-    | COMMENT             |  VARCHAR2(4096) |   清理任务失败记录的描述信息 |
-    | PATH                |  VARCHAR2(1024) |   备份所在目的端路径信息 |
-
-## CDB_OB_BACKUP_DELETE_TASK_HISTORY
-
-系统租户可通过该视图查看所有租户已执行完成的 `backup_set/backup_piece` 备份清理任务历史信息。
+`oceanbase.CDB_OB_BACKUP_TASKS` 用于展示各租户 Task 级数据备份任务的进度。
 
 |  字段 | 类型  |  描述 |
-|------|-------|-------|
-| TENANT_ID           |  bigint(20) |   租户 ID |
-| TASK_ID             |  bigint(20) |   任务 ID，一个任务对应清理一个 `backup_set/backup_piece` |
-| INCARNATION         |  bigint(20) |   分身 ID |
-| JOB_ID              |  bigint(20) |   任务所属 JOB_ID |
-| TASK_TYPE           |  varchar(64) |   任务类型： <ul><li> BACKUP SET ：清理 `backup_set`</li><li>BACKUP PIECE ：清理 `backup_piece`</li></ul>|
-| ID                  |  bigint(20) |    清理的 `backup_set/backup_piece` ID  |
-| ROUND_ID            |  bigint(20)) |   任务类型为 BACKUP PIECE 时所属的日志归档轮次 |
-| DEST_ID             |  bigint(20) |    备份所在目的端的 dest_id |
-| START_TIMESTAMP     |  timestamp(6) |   任务开始时租户当前时间 |
-| END_TIMESTAMP       |  timestamp(6) |   任务结束时租户当前时间 |
-| STATUS              |  varchar(64) |    任务状态： <ul><li> `INIT` ：任务初始化阶段 </li><li> `DOING` ：任务执行阶段 </li><li> `CANCELING` ：任务被取消阶段 </li><li> `COMPLETED` ：任务执行成功 </li><li> `FAILED` ：任务执行失败 </li><li> `CANCELED` ：任务成功被取消 </li></ul>|
-| TOTAL_LS_COUNT      |  bigint(20) |  任务下总的日志流数目 |
-| FINISH_LS_COUNT     |  bigint(20) |   清理成功的日志流任务数目 |
-| RESULT              |  bigint(20) |   任务结果，显示错误码 |
-| COMMENT             |  varchar(4096) |   清理任务失败记录的描述信息 |
-| PATH                |  varchar(1024) |   备份所在目的端路径信息 |
+|----------------------------------|---------------------|--------------|
+| TENANT_ID                        | bigint(20)          | 执行备份任务的租户 ID |
+| TASK_ID                          | bigint(20)          | Task 级备份任务的 ID，对应一个备份集的任务 |
+| JOB_ID                           | bigint(20)          | Task 级备份任务所属的 job_id, 对应一次备份任务 |
+| INCARNATION                      | bigint(20)          | 分身 ID |
+| BACKUP_SET_ID                    | bigint(20)          | Task 对应的备份集 ID |
+| START_TIMESTAMP                  | timestamp(6)        | Task 任务的发起时间 |
+| END_TIMESTAMP                    | timestamp(6)        | Task 任务的结束时间 |
+| STATUS                           | varchar(4096)       | 备份任务状态 |
+| START_SCN                        | bigint(20)          | 备份任务起始位点 |
+| END_SCN                          | bigint(20)          | 备份任务结束位点 |
+| USER_LS_START_SCN                | bigint(20)          | 用户日志流起始位点 |
+| ENCRYPTION_MODE                  | varchar(4096)       | 加密模式：<ul><li>None：表示不加密 </li><li>Password：表示只使用密码保护 </li><li>Password Encryption ：表示加密，并且使用密码保护 </li><li >Transparent Encryption：表示使用 TDE 加密 </li><li>Dual mode Encryption ：表示使用 TDE 加密以及密码保护</li></ul></br>目前仅支持 None 和 Password 两种模式。 |
+| PASSWD                           | varchar(4096)       | 备份集的加密密码 |
+| INPUT_BYTES                      | bigint(20)          | 输入字节数 |
+| OUTPUT_BYTES                     | bigint(20)          | 输出字节数 |
+| OUTPUT_RATE_BYTES                | bigint(20)          | 输出速率 |
+| EXTRA_META_BYTES                 | bigint(20)          | 元数据的额外字节数 |
+| TABLET_COUNT                     | bigint(20)          | 总分区个数 |
+| FINISH_TABLET_COUNT              | bigint(20)          | 完成备份的分区个数 |
+| MACRO_BLOCK_COUNT                | bigint(20)          | 宏块个数 |
+| FINISH_MACRO_BLOCK_COUNT         | bigint(20)          | 完成备份的宏块个数 |
+| FILE_COUNT                       | bigint(20)          | 文件个数 |
+| META_TURN_ID                     | bigint(20)          | 备份元数据的轮次 |
+| DATA_TURN_ID                     | bigint(20)          | 备份数据的轮次 |
+| RESULT                           | bigint(20)          | 错误码 |
+| COMMENT                          | varchar(4096)       | 错误码描述 |
+| PATH                             | varchar(4096)       | 备份路径信息 |
 
-## DBA_OB_BACKUP_DELETE_TASK_HISTORY
+## CDB_OB_BACKUP_TASK_HISTORY
 
-用户租户可通过该视图查看所在租户已执行完成的 `backup_set/backup_piece` 备份清理任务的历史信息。
-
-* MySQL 模式
-
-    |  字段 | 类型  |  描述 |
-    |------|-------|-------|
-    | TASK_ID             |  bigint(20) |   任务 ID，一个任务对应清理一个 `backup_set/backup_piece` |
-    | INCARNATION         |  bigint(20) |   分身 ID |
-    | JOB_ID              |  bigint(20) |   任务所属 JOB_ID |
-    | TASK_TYPE           |  varchar(64) |   任务类型： <ul><li> BACKUP SET ：清理`backup_set`</li><li>BACKUP PIECE ：清理`backup_piece`</li></ul>|
-    | ID                  |  bigint(20) |   清理的 `backup_set/backup_piece` ID |
-    | ROUND_ID            |  bigint(20) |   任务类型为 BACKUP PIECE 时所属的日志归档轮次 |
-    | DEST_ID             |  bigint(20) |   备份所在目的端的 dest_id |
-    | START_TIMESTAMP     |  timestamp(6) |   任务开始时租户当前时间 |
-    | END_TIMESTAMP       |  timestamp(6) |   任务结束时租户当前时间 |
-    | STATUS              |  varchar(64) |    任务状态：<ul><li> `INIT` ：任务初始化阶段 </li><li> `DOING` ：任务执行阶段 </li><li> `CANCELING` ：任务被取消阶段 </li><li> `COMPLETED` ：任务执行成功 </li><li> `FAILED` ：任务执行失败 </li><li> `CANCELED` ：任务成功被取消 </li></ul>|
-    | TOTAL_LS_COUNT      |  bigint(20) |  任务下总的日志流数目 |
-    | FINISH_LS_COUNT     |  bigint(20) |   清理成功的日志流任务数目 |
-    | RESULT              |  bigint(20) |   任务结果，显示错误码 |
-    | COMMENT             |  varchar(4096) |   清理任务失败记录的描述信息 |
-    | PATH                |  varchar(1024) |   备份所在目的端路径信息 |
-
-* Oracle 模式
-
-    |  字段 | 类型  |  描述 |
-    |------|-------|-------|
-    | TASK_ID             |  NUMBER(38)|   任务 ID，一个任务对应清理一个 `backup_set/backup_piece` |
-    | INCARNATION         |  NUMBER(38) |   分身 ID |
-    | JOB_ID              |  NUMBER(38) |   任务所属 JOB_ID |
-    | TASK_TYPE           |  VARCHAR2(64) |   任务类型： <ul><li> BACKUP SET ：清理 `backup_set`</li><li>BACKUP PIECE ：清理`backup_piece`</li></ul>|
-    | ID                  |  NUMBER(38) |   清理的 `backup_set/backup_piece` ID |
-    | ROUND_ID            |  NUMBER(38) |   任务类型为 BACKUP PIECE 时所属的日志归档轮次 |
-    | DEST_ID             |  NUMBER(38) |   备份所在目的端的 dest_id |
-    | START_TIMESTAMP     |  VARCHAR2(256) |   任务开始时租户当前时间 |
-    | END_TIMESTAMP       |  VARCHAR2(256) |   任务结束时租户当前时间 |
-    | STATUS              |  VARCHAR2(64)|    任务状态：<ul><li> `INIT` ：任务初始化阶段 </li><li> `DOING` ：任务执行阶段 </li><li> `CANCELING` ：任务被取消阶段 </li><li> `COMPLETED` ：任务执行成功 </li><li> `FAILED` ：任务执行失败 </li><li> `CANCELED` ：任务成功被取消 </li></ul>|
-    | TOTAL_LS_COUNT      |  NUMBER(38)|  任务下总的日志流数目 |
-    | FINISH_LS_COUNT     |  NUMBER(38)|   清理成功的日志流任务数目 |
-    | RESULT              |  NUMBER(38) |   任务结果，显示错误码 |
-    | COMMENT             |  VARCHAR2(4096) |   清理任务失败记录的描述信息 |
-    | PATH                |  VARCHAR2(1024)|   备份所在目的端路径信息 |
-
-## CDB_OB_BACKUP_DELETE_POLICY
-
-系统租户可通过该视图查看所有租户正在生效的备份清理策略信息。
+`oceanbase.CDB_OB_BACKUP_TASK_HISTORY` 用于展示各租户 Task 级数据备份任务的历史信息。
 
 |  字段 | 类型  |  描述 |
-|------|-------|-------|
-| TENANT_ID                 |  bigint(20) |    租户 ID |
-| POLICY_NAME               |  varchar(256) |    清理策略名 |
-| RECOVERY_WINDOW           |  varchar(64) |   可恢复时间窗口，默认值为 `0` |
+|----------------------------------|---------------------|--------------|
+| TENANT_ID                        | bigint(20)          | 执行备份任务的租户 ID |
+| TASK_ID                          | bigint(20)          | Task 级备份任务的 ID，对应一个备份集的任务  |
+| JOB_ID                           | bigint(20)          | Task 级备份任务所属的 job_id, 对应一次备份任务 |
+| INCARNATION                      | bigint(20)          | 分身 ID  |
+| BACKUP_SET_ID                    | bigint(20)          | Task 对应的备份集 ID  |
+| START_TIMESTAMP                  | timestamp(6)        | Task 任务的发起时间  |
+| END_TIMESTAMP                    | timestamp(6)        | Task 任务的结束时间  |
+| STATUS                           | varchar(4096)       | Task 任务的状态  |
+| START_SCN                        | bigint(20)          | 备份任务的起始位点  |
+| END_SCN                          | bigint(20)          | 备份任务的结束位点  |
+| USER_LS_START_SCN                | bigint(20)          | 用户日志流的起始位点  |
+| ENCRYPTION_MODE                  | varchar(4096)       | 加密模式：<ul><li>None：表示不加密 </li><li>Password：表示只使用密码保护 </li><li>Password Encryption ：表示加密，并且使用密码保护 </li><li >Transparent Encryption：表示使用 TDE 加密 </li><li>Dual mode Encryption ：表示使用 TDE 加密以及密码保护</li></ul></br>目前仅支持 None 和 Password 两种模式。 |
+| PASSWD                           | varchar(4096)       | 备份集的加密密码  |
+| INPUT_BYTES                      | bigint(20)          | 输入字节数  |
+| OUTPUT_BYTES                     | bigint(20)          | 输出字节数  |
+| OUTPUT_RATE_BYTES                | bigint(20)          | 输出速率  |
+| EXTRA_META_BYTES                 | bigint(20)          | 元数据的额外字节数  |
+| TABLET_COUNT                     | bigint(20)          | 总分区个数  |
+| FINISH_TABLET_COUNT              | bigint(20)          | 完成备份的分区个数  |
+| MACRO_BLOCK_COUNT                | bigint(20)          | 宏块个数  |
+| FINISH_MACRO_BLOCK_COUNT         | bigint(20)          | 完成备份的宏块个数  |
+| FILE_COUNT                       | bigint(20)          | 文件个数  |
+| META_TURN_ID                     | bigint(20)          | 备份元数据的轮次  |
+| DATA_TURN_ID                     | bigint(20)          | 备份数据的轮次 |
+| RESULT                           | bigint(20)          | 错误码  |
+| COMMENT                          | varchar(4096)       | 错误码描述  |
+| PATH                             | varchar(4096)       | 备份路径信息  |
 
-## DBA_OB_BACKUP_DELETE_POLICY
+## CDB_OB_BACKUP_SET_FILES
 
-用户租户可通过该视图查看正在生效的备份清理策略信息。
+`oceanbase.CDB_OB_BACKUP_SET_FILES` 用于展示各租户备份集信息。
 
-* MySQL 模式
-
-    |  字段 | 类型  |  描述 |
-    |------|-------|-------|
-    | POLICY_NAME               |  varchar(256) |    清理策略名 |
-    | RECOVERY_WINDOW           |  varchar(64) |   可恢复时间窗口，默认值为 `0` |
-
-* Oracle 模式
-
-    |  字段 | 类型  |  描述 |
-    |------|-------|-------|
-    | POLICY_NAME               |  VARCHAR2(256)|    清理策略名 |
-    | RECOVERY_WINDOW           |  VARCHAR2(64) |   可恢复时间窗口，默认值为 `0` |
+|    字段                  |      类型            |         描述 |
+|--------------------------|---------------------|--------------|
+| TENANT_ID                | bigint(20)          | 执行备份任务的租户ID |
+| BACKUP_SET_ID            | bigint(20)          | 备份集ID |
+| DEST_ID                  | bigint(20)          | 路径ID |
+| INCARNATION              | bigint(20)          | 分身ID |
+| BACKUP_TYPE              | varchar(64)         | 备份类型 |
+| PREV_FULL_BACKUP_SET_ID  | bigint(20)          | 当前备份集依赖的前一个全量备份集ID |
+| PREV_INC_BACKUP_SET_ID   | bigint(20)          | 当前备份集依赖的前一个增量备份集ID |
+| START_TIMESTAMP          | timestamp(6)        | 备份开始时间戳 |
+| END_TIMESTAMP            | varchar(26)         | 备份结束时间戳 |
+| STATUS                   | varchar(64)         | 备份集状态: <ul><li>`SUCCESS`：表示备份成功 </li><li>`FAILED`：表示备份失败</li></ul> |
+| FILE_STATUS              | varchar(64)         | 备份集文件状态 |
+| ELAPSED_SECONDES         | decimal(22,0)       | 备份耗时  |
+| PLUS_ARCHIVELOG          | varchar(4096)       | 是否带补齐日志  |
+| START_REPLAY_SCN         | bigint(20) unsigned | 备份集依赖的日志起点SCN |
+| START_REPLAY_SCN_DISPLAY | varchar(26)         | 备份集依赖的日志起点对应的时间戳 |
+| MIN_RESTORE_SCN          | bigint(20) unsigned | 备份集可供恢复的最小位点SCN |
+| MIN_RESTORE_SCN_DISPLAY  | varchar(26)         | 备份集恢复最小位点对应发的时间戳 |
+| INPUT_BYTES              | bigint(20)          | 输入字节数    |
+| OUTPUT_BYTES             | bigint(20)          | 输出字节数     |
+| OUTPUT_RATE_BYTES        | decimal(28,4)       | 输出速率  |
+| EXTRA_META_BYTES         | bigint(20)          | 元数据的额外字节数     |
+| TABLET_COUNT             | bigint(20)          | 总分区个数    |
+| FINISH_TABLET_COUNT      | bigint(20)          | 完成备份的分区个数      |
+| MACRO_BLOCK_COUNT        | bigint(20)          | 宏块个数     |
+| FINISH_MACRO_BLOCK_COUNT | bigint(20)          | 完成备份的宏块个数       |
+| FILE_COUNT               | bigint(20)          | 文件个数     |
+| META_TURN_ID             | bigint(20)          | 备份元数据的轮次       |
+| DATA_TURN_ID             | bigint(20)          | 备份数据的轮次    |
+| RESULT                   | bigint(20)          | 错误码     |
+| COMMENT                  | varchar(4096)       | 错误码描述      |
+| ENCRYPTION_MODE          | varchar(64)         | 加密模式：<ul><li>None：表示不加密 </li><li>Password：表示只使用密码保护 </li><li>Password Encryption ：表示加密，并且使用密码保护 </li><li >Transparent Encryption：表示使用 TDE 加密 </li><li>Dual mode Encryption ：表示使用 TDE 加密以及密码保护</li></ul></br>目前仅支持 `None` 和 `Password` 两种模式。  |
+| PASSWD                   | varchar(128)        | 备份集密码     |
+| TENANT_COMPATIBLE        | varchar(4096)       | 租户版本号     |
+| BACKUP_COMPATIBLE        | bigint(20)          | 备份集版本号    |
+| PATH                     | varchar(4096)       | 备份路径     |
