--- a/zh-CN/7.reference/2.sql-syntax/1.system-tenants/8.create-tenant.md
+++ b/zh-CN/7.reference/2.sql-syntax/1.system-tenants/8.create-tenant.md
@@ -53,7 +53,7 @@ opt_set_sys_var:
 | COLLATE                  | 指定字符序。                                                                                                                                          |
 | PRIMARY_ZONE             | 指定租户所在的 Primary Zone 名称。                                                                                                                        |
 | LOCALITY                 | 描述副本在 Zone 间的分布情况。 例如：`F@z1,F@z2,F@z3` 表示 `z1`、`z2`、`z3` 为全功能副本。                                                |
-| system_var_name          | 指定租户系统变量值。 其中 `ob_compatibility_mode` 用于指定租户的兼容模式（可选 MySQL 或 Oracle 模式），而且只能在创建时指定；如果不指定 `ob_compatibility_mode`，默认兼容模式为 MySQL。 |
+| system_var_name          | 指定租户系统变量值。 |
 
 
 
@@ -64,14 +64,6 @@ opt_set_sys_var:
 
   ```sql
   obclient> CREATE TENANT IF NOT EXISTS tenant1 CHARSET='utf8mb4',PRIMARY_ZONE='zone1', RESOURCE_POOL_LIST=('pool1');
-  ```
-
-  
-
-* 创建 Oracle 兼容模式租户。
-
-  ```javascript
-  obclient> CREATE TENANT IF NOT EXISTS tenant1 ZONE_LIST=('zone1'), PRIMARY_ZONE='zone1', RESOURCE_POOL_LIST=('pool1') SET ob_compatibility_mode='oracle';
   ```
 
   
