--- a/zh-CN/8.FAQ/2.sql-related-problems-faq.md
+++ b/zh-CN/8.FAQ/2.sql-related-problems-faq.md
@@ -195,7 +195,7 @@ UPDATE 所涉及的场景如下：
 - 如果开启了 `ob_enable_batched_multi_statement`，那么对于场景2/3/4 的 UPDATE Batch 执行，OceanBase Server 端会对格式一致的多条 UPDATE 语句当成一条语句进行解析，并根据对应的参数和数据分布，生成 batch physical plan，这可以有效的提升 Batch UPDATE 执行的效率。但在使用这个功能时需要开启显式事务。
 
 **DELETE**
-当前版本对于 Batch DELETE 语句也有优化效果。
+当前版本对于 Batch DELETE 语句没有优化效果。
 
 ### 如何在不同的场景下选择不同的配置？
 
