--- a/zh-CN/6.manage/3.replica-management/4.replica-fine-granularity/4.log-stream.md
+++ b/zh-CN/6.manage/3.replica-management/4.replica-fine-granularity/4.log-stream.md
@@ -83,7 +83,7 @@ RedoLog 是基于 Paxos 协议实现的日志模块，TxCrMgr 是事务管理结
 
     根据查询结果，1004 租户为 mq_t1，其 `PRIMARY_ZONE = 'sa128_obv4_1 ;sa128_obv4_2,sa128_obv4_3'` ，`unit_num = 1`。
 
-    所以一共有2条日志流，一条归属于 Meta 租户即 `LS_ID =1` ，另一条归属于用户租户即 `LS_ID = 1001` 。
+    所以一共有 1 条用户表数据的日志流，其 `LS_ID =  1001`。另一条 `LS_ID = 1` 的日志流负责了用户租户下的系统表数据。
 
 3. 通过 `oceanbase.DBA_OB_TABLET_TO_LS` 视图维护了 Tablet 到日志流的映射关系，从而获取 Tablet 位置信息。
 
