--- a/zh-CN/5.administrator-guide/9.performance-tuning-guide/5.sql-optimization/4.sql-optimization-1/7.manage-execution-plans/1.optimizer-hint.md
+++ b/zh-CN/5.administrator-guide/9.performance-tuning-guide/5.sql-optimization/4.sql-optimization-1/7.manage-execution-plans/1.optimizer-hint.md
@@ -316,6 +316,36 @@ OceanBase 数据库中虽然支持指定多个 `INDEX`，但是对于 `USE` 和 
 在 SQL 语句中，表名存在别名即 `table_name [AS] alias` ,必须写表别名，才能使 `INDEX` 生效。示例如下：
 
 ```sql
+obclient> create table t1(c1 int, c2 int, c3 int);
+Query OK, 0 rows affected
+
+obclient> create index idx1 on t1(c1);
+Query OK, 0 rows affected
+
+obclient> create index idx2 on t1(c2);
+Query OK, 0 rows affected
+
+obclient> insert into t1 with recursive cte(n) as (select 1 from dual union all select n+1 from cte where n < 1000) select n, mod(n, 3), n from cte;
+Query OK, 1 row affected
+
+obclient> analyze table t1 COMPUTE STATISTICS for all columns size 128;
+Query OK, 0 rows affected
+
+obclient> explain select * from t1 where c1 = 1 and c2 = 1\G
+*************************** 1. row ***************************
+Query Plan: =======================================
+|ID|OPERATOR  |NAME    |EST. ROWS|COST|
+---------------------------------------
+|0 |TABLE SCAN|T1(IDX1)|1        |5   |
+=======================================
+
+Outputs & filters: 
+-------------------------------------
+  0 - output([T1.C1], [T1.C2], [T1.C3]), filter([T1.C2 = 1]), rowset=256, 
+      access([T1.__pk_increment], [T1.C1], [T1.C2], [T1.C3]), partitions(p0)
+
+1 row in set
+
 -------生效的 index
 obclient> explain select /*+index(t idx2)*/ * from t1 t where c1 = 1 and c2 = 1\G
 *************************** 1. row ***************************
@@ -348,6 +378,8 @@ Outputs & filters:
 
 1 row in set 
 ```
+
+根据示例结果，`c1 = 1` 过滤性优于 `c2 = 1`，INDEX Hint 不生效时使用优化器索引选择机制使用了 `IDX1`。
 
 ### FULL Hint
 
