--- a/zh-CN/7.reference/2.sql-syntax/1.system-tenants/5.alter-tenant.md
+++ b/zh-CN/7.reference/2.sql-syntax/1.system-tenants/5.alter-tenant.md
@@ -43,7 +43,7 @@ opt_global_sys_vars_set:
 |          **参数**          |                                      **描述**                                      |
 |--------------------------|----------------------------------------------------------------------------------|
 | tenant_name              | 指定要修改的租户名。`ALL` 表示修改所有租户。                                       |
-| RESOURCE_POOL_LIST       | 资源池列表。一个租户仅支持使用一个资源池。                                           |
+| RESOURCE_POOL_LIST       | 资源池列表。                                           |
 | DEFAULT TABLEGROUP       | 设置租户默认表组信息，`NULL` 表示取消数据库默认表组。                                                   |
 | COMMENT                  | 修改注释。                                                                            |
 | CHARACTER SET \| CHARSET | 修改租户的字符集。<br>**说明**  当前版本暂不支持此参数。                   |
